perlop.pod 70% maybe...

--- a/perldoc/ko/perl/5.10/perlop.pod
+++ b/perldoc/ko/perl/5.10/perlop.pod
@@ -3440,13 +3440,12 @@ shells; C<&> on the Windows NT C<cmd> shell).
 
 =end original
 
-(“÷å“ªË DOS “ù¦“ªÎ)“«×“«é“«Ã“«È“«Õ“«©’¡¼“«à“ªË“ªÏ“¡¢“«·“«§“«ë“ª¬“ÜÜ‘Êý“ú¼“ªÎ“«³“«Þ“«ó“«É“ªò
-“Ðâ“ª¦“ª³“ªÈ“ª¬“ªÇ“ª­“ªÊ“ª¤“ªâ“ªÎ“ª¬“ª¢“ªë“ªÎ“ªÇ“¡¢“Ùþ“í®“Öª“ªË“ËÇ“ú¼“ªò“ìý“ªì“ªë“ªÈ
-“ª¢“ªÊ“ª¿“ªÎ“ØÐ“ªÞ“ªÊ“ª¤“Ì¿“Íý“ªË“ªÊ“ªë“íÞ“ùê“ª¬“ª¢“ªê“ªÞ“ª¹“¡£
-“«·“«§“«ë“ª¬’ÂÐ’±þ“ª·“ªÆ“ª¤“ªì“ªÐ“¡¢“«³“«Þ“«ó“«É“ÝÂ“ùÜ“Ùþ“í®“ªÇ“ÝÂ“ùÜ“ª¹“ªë“ª³“ªÈ“ªÇ
-1 “ú¼“ªË“ÜÜ‘Êý“ªÎ“«³“«Þ“«ó“«É“ªò“ìý“ªì“ªÆ“ú°’¼á“ªµ“ª»“ªë“ª³“ªÈ“ª¬“ªÇ“ª­“ªÞ“ª¹
-(“ª³“ªÎ“Ùþ“í®“ªÏ“¡¢“Òý“ª¯“ªÎ Unix “«·“«§“«ë“ªÇ“ªÏ C<;>“¡¢Windows NT C<cmd> “«·“«§“«ë“ªÇ“ªÏ
-C<&> “ªÇ“ª¹)“¡£
+(“Æ¯“È÷ DOS “Ç³“ÀÇ) “ÇÃ“·§“Æû“¿¡“´Â, “¼Ð“ÀÌ “¿©“·¯“ÁÙ“ÀÇ “Ä¿“¸Ç“µå“¸¦ “´Ù“·ê “¼ö “¾ø“±â “¶§“¹®“¿¡
+“¹®“ÀÚ“¿­“¿¡ “ÁÙ“¹Ù“²Þ“À» “ÇÏ“¸é “¿ø“ÇÏ“Áö “¾Ê“´Â “°á“°ú“°¡ “³ª“¿À“´Â “°æ“¿ì“°¡ “ÀÖ“½À“´Ï“´Ù.
+“¼Ð“ÀÌ “´ë“ÀÀ“ÇÏ“°í “ÀÖ“À¸“¸é “Ä¿“¸Ç“µå“ºÐ“ÇÒ“¹®“ÀÚ“·Î “ºÐ“ÇÒ“ÇÏ“´Â “°Í“À¸“·Î 
+“ÇÑ“ÁÙ“¿¡ “¿©“·¯ “Ä¿“¸Ç“µå“¸¦ “³Ö“¾î“¼­ “ÇØ“¼®“ÇÏ“°Ô “ÇÒ “¼ö “ÀÖ“½À“´Ï“´Ù.
+(“ÀÌ “¹®“ÀÚ“´Â, “¸¹“Àº “À¯“´Ð“½º “¼Ð“¿¡“¼­“´Â C<;>, Windows NT C<cmd> “¼Ð“¿¡“¼­“´Â
+C<&> “ÀÔ“´Ï“´Ù).
 
 =begin original
 
@@ -3458,12 +3457,12 @@ C<IO::Handle> on any open handles.
 
 =end original
 
-v5.6.0 “ì¤“Ë½“¡¢Perl “ªÏ“í­“«×“«í“«»“«¹“ªÎ’¼Â“ú¼“îñ“ªË“ßö“ª­’¹þ“ªß“éÄ“ªË“ËÒ“ª¤“ªÆ“ª¤“ªë“îï“ªÆ“ªÎ
-“«Õ“«¡“«¤“«ë“ªò“«Õ“«é“«Ã“«·“«å“ª·“ªè“ª¦“ªÈ“ª·“ªÞ“ª¹“ª¬“¡¢“ª³“ªì“ªË’ÂÐ’±þ“ª·“ªÆ“ª¤“ªÊ“ª¤
-“«×“«é“«Ã“«È“«Õ“«©’¡¼“«à“ªâ“ª¢“ªê“ªÞ“ª¹(L<perlport> “ªò‘²Î“ðÎ“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤)“¡£
-“äÌ“îï“ªÎ“ª¿“ªá“ªË“ªÏ“¡¢C<$|> (English “«â“«¸“«å’¡¼“«ë“ªÇ“ªÏ $AUTOFLUSH)“ªò“«»“«Ã“«È“ª¹“ªë“ª«“¡¢
-“ËÒ“ª¤“ªÆ“ª¤“ªë“îï“ªÆ“ªÎ“«Ï“«ó“«É“«ë“ªË’ÂÐ“ª·“ªÆ C<IO::Handle> “ªÎ C<autoflush()> “«á“«½“«Ã“«É“ªò
-“û¼“ªÓ“õó“ª¹“ù±“é©“ª¬“ª¢“ªê“ªÞ“ª¹“¡£
+v5.6.0 “ÀÌ“ÈÄ, Perl “Àº “ÀÚ“½Ä “ÇÁ“·Î“¼¼“½º“ÀÇ “½Ç“Çà“Àü“¿¡ “Ãâ“·Â“¿ë“À¸“·Î “¿­“¸° “¸ð“µç
+“ÆÄ“ÀÏ“À» “ÇÃ“·¯“½¬“ÇÏ“·Á“°í “ÇÏ“Áö“¸¸, “ÀÌ“°Í“¿¡ “´ë“ÀÀ“ÇÏ“Áö “¾Ê“Àº “ÇÃ“·§“Æû“µµ “ÀÖ“½À“´Ï“´Ù.
+(L<perlport> “¸¦ “Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä).
+“¾È“Àü“À» “À§“ÇØ“¼­“´Â,  C<$|> (English “¸ð“µâ“¿¡“¼­“´Â $AUTOFLUSH)“¸¦ “¼³“Á¤“ÇÏ“µç“°¡,
+“¿­“·Á“ÀÖ“´Â “¸ð“µç “ÇÚ“µé“¿¡ “´ë“ÇØ C<IO::Handle>“ÀÇ C<autoflush()> “¸Þ“¼Ò“µå“¸¦
+“È£“Ãâ“ÇÒ “ÇÊ“¿ä“°¡ “ÀÖ“½À“´Ï“´Ù.
 
 =begin original
 
@@ -3474,11 +3473,11 @@ release notes for more details about your particular environment.
 
 =end original
 
-“«³“«Þ“«ó“«É“ú¼“ªÎ“íþ“ªµ“ªË“ð¤“ùÚ“ª¬“ª¢“ªë“«³“«Þ“«ó“«É“«·“«§“«ë“ª¬“ª¢“ªë“ª³“ªÈ“ªË“ñ¼“ëò“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
-“îï“ªÆ“ªÎ“ù±“é©“ªÊ’ÊÑ“üµ“ª¬“ú¼“ªï“ªì“ª¿“ý­“¡¢“«³“«Þ“«ó“«É“Ùþ“í®“Öª“ª¬“ª³“ªÎ“ð¤“ùÚ“ªò“êÆ“ª¨“ªÊ“ª¤“ª³“ªÈ“ªò
-“ÜÁ“î¡“ª¹“ªë“ù±“é©“ª¬“ª¢“ªê“ªÞ“ª¹“¡£
-“÷å“ïÒ“ªÎ“ü»“ÌÑ“ªË’´Ø“ª¹“ªë“ªµ“ªé“ªÊ“ªë“ßÙ“á¬“ªË“ªÄ“ª¤“ªÆ“ªÏ“«×“«é“«Ã“«È“«Õ“«©’¡¼“«à“Í³“êó“ªÎ
-“«ê“«ê’¡¼“«¹“«Î’¡¼“«È“ªò‘²Î“ðÎ“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
+“Ä¿“¸Ç“µå “ÁÙ“ÀÇ “±æ“ÀÌ“¿¡ “Á¦“ÇÑ“ÇÏ“´Â “Ä¿“¸Ç“µå“¼Ð“ÀÌ “ÀÖ“´Ù“´Â “°Í“¿¡ “ÁÖ“ÀÇ“ÇØ“ÁÖ“¼¼“¿ä.
+“¸ð“µç “ÇÊ“¿ä“ÇÑ “º¯“È¯“ÀÌ “¼ö“Çà“µÈ “µÚ“¿¡, “Ä¿“¸Ç“µå “¹®“ÀÚ“¿­“ÀÌ “ÀÌ “Á¦“ÇÑ“À» “³Ñ“Áö “¾Ê“´Â “°Í“À»
+“º¸“Àå“ÇÒ “ÇÊ“¿ä“°¡ “ÀÖ“½À“´Ï“´Ù.
+“Æ¯“Á¤“ÀÇ “È¯“°æ“¿¡ “°ü“ÇÑ “¿©“·¯ “»ç“¾ç“¿¡ “´ë“ÇØ“¼­“´Â “ÇÃ“·§“Æû “°í“À¯“ÀÇ “¸±“¸®“Áî“³ë“Æ®“¸¦
+“Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä.
 
 =begin original
 
@@ -3493,16 +3492,16 @@ Just understand what you're getting yourself into.
 
 =end original
 
-“ª³“ªÎ“æÑ“ß©“í­“ªò“ÞÅ“ª¦“ªÈ“¡¢“«×“«í“«°“«é“«à“ªÎ“ì¹“ãÖ“ª¬“ÍÝ“Ññ“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-“û¼“ªÓ“õó“ªµ“ªì“ªë“«·“«§“«ë“«³“«Þ“«ó“«É“ªÏ“«·“«¹“«Æ“«à“ªË“ªè“ªÃ“ªÆ“ì¶“ªÊ“ªê“¡¢
-’¼Â“ð·“îï“ª¯“ðí“î¤“ª·“ªÊ“ª¤“ª³“ªÈ“ªâ“ª¢“ªë“ª«“ªé“ªÇ“ª¹“¡£
-“ìé“ªÄ“ªÎ“ÖÇ“ªÈ“ª·“ªÆ“ªÏ“¡¢POSIX “«·“«§“«ë“ªÎ C<type> “«³“«Þ“«ó“«É“ªÏ
-DOS “ªÎ C<type> “«³“«Þ“«ó“«É“ªÈ“ÓÞ“ª­“ª¯“ì¶“ªÊ“ªÃ“ªÆ“ª¤“ªÞ“ª¹“¡£
-“ª³“ªì“ªÏ“¡¢“ù¼“ª«“ªò˜´´“ª¹“ª¿“ªá“ªË“ïá“ª·“ª¤“Û°“Ûö“ªÈ“ª·“ªÆ“æ½“«¯“«©’¡¼“«È“ªò“ÞÅ“ª¦“ª³“ªÈ“ªò
-“ù­“ª±“ªë“ªÙ“ª­“ªÇ“ª¢“ªë“ª³“ªÈ“ªò“ëò“Ú«“ª·“ªÞ“ª»“ªó“¡£
-Perl “ªÏ“ïÈ“ó·’ºÞ“ªÎ“ªè“ª¦“ªÊ“åë“åÞ“ªÈ“ª·“ªÆ“íÂ“ªé“ªì“¡¢“ïÈ“ó·“ªµ“ªì“ªë“ªÙ“ª­“ªâ“ªÎ“ªÎ“ìé“ªÄ“ªÏ
-“«³“«Þ“«ó“«É“ªÇ“ª¹“¡£
-’Ã±“ªË“ª¢“ªÊ“ª¿“ª¬“ù¼“ªò“ª·“ªè“ª¦“ªÈ“ª·“ªÆ“ª¤“ªë“ª«“ªò“×â“ú°“ª·“ªÆ“ªª“ª¤“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
+“ÀÌ “¿¬“»ê“ÀÚ“¸¦ “»ç“¿ë“ÇÏ“¸é, “ÇÁ“·Î“±×“·¥“ÀÇ “ÀÌ“½Ä“ÀÌ “°ï“¶õ“ÇØ“Áý“´Ï“´Ù.
+“È£“Ãâ“µÇ“´Â “¼Ð“Ä¿“¸Ç“µå“´Â “½Ã“½º“ÅÛ“¿¡ “µû“¶ó “´Ù“¸£“°í,
+“½Ç“Á¦ “Àü“Çô “Á¸“Àç“ÇÏ“Áö “¾Ê“´Â “°Í“µµ “ÀÖ“±â“¶§“¹®“ÀÌ“ÁÒ.
+“ÇÏ“³ª“ÀÇ “¿¹“·Î“½á, POSIX“¼Ð“ÀÇ C<type> “Ä¿“¸Ç“µå“´Â
+DOS “ÀÇ C<type> “Ä¿“¸Ç“µå“¿Í “Å©“°Ô “´Ù“¸¨“´Ï“´Ù.
+“ÀÌ“°Í“Àº “¹º“°¡“¸¦ “ÇÏ“±â “À§“ÇØ “Á¤“È®“ÇÑ “¹æ“¹ý“À¸“·Î“½á“´Â “¿ª“µû“¿È“Ç¥“¸¦ “»ç“¿ë“ÇÏ“Áö “¾Ê“¾Æ“¾ß
+“ÇÑ“´Ù“´Â “°Í“À» “ÀÇ“¹Ì“ÇÏ“Áö “¾Ê“½À“´Ï“´Ù.
+Perl “Àº “Á¢“Âø“Á¦“°°“Àº “¾ð“¾î“·Î“½á “¸¸“µé“¾î“Á³“°í, “Á¢“Âø“µÇ“¾î“¾ß“ÇÒ “°Í“ÀÇ “ÇÏ“³ª“´Â
+“Ä¿“¸Ç“µå“ÀÔ“´Ï“´Ù.
+“´Ü“¼ø“È÷ “¹«“¾ù“¸¦ “ÇÏ“·Á“°í “ÇÏ“´Â “°Í“ÀÎ“°¡“¸¦ “ÀÌ“ÇØ“ÇØ “µÎ“¼¼“¿ä.
 
 =begin original
 
@@ -3510,7 +3509,7 @@ See L</"I/O Operators"> for more discussion.
 
 =end original
 
-“ªµ“ªé“ªÊ“ªë“ì¡“Öå“ªË“ªÄ“ª¤“ªÆ“ªÏ L</"I/O Operators"> “ªò‘²Î“ðÎ“ª·“ªÆ“ù»“ªµ“ª¤“¡£
+“¿©“·¯ “ÀÇ“³í“¿¡ “´ë“ÇØ“¼­“´Â L</"I/O Operators"> “¸¦ “Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä.
 
 =item qw/STRING/
 X<qw> X<quote, list> X<quote, words>
@@ -3523,9 +3522,9 @@ equivalent to:
 
 =end original
 
-“ØØ“ªá’¹þ“ªÞ“ªì“ª¿“Íö“ÛÜ“ªò‘Çø“ï·“Ùþ“í®“ªÈ“ª·“ªÆ“¡¢STRING “ª«“ªé’È´“ª­“õó“ª·“ª¿
-’Ã±“åÞ“ªÎ“«ê“«¹“«È“ªò“øÄ’²Á“ª·“ªÞ“ª¹“¡£
-“ª³“ªì“ªÏ“¡¢“ì¤“ù»“ªÎ“ãÒ“ªÈ“ÓÞ‘Ìå“ÔÒ“ª¸“ªÈ“ÍÅ“ª¨“ªé“ªì“ªÞ“ª¹:
+“»ð“ÀÔ“µÈ “°ø“¹é“À» “±¸“ºÐ“ÀÚ“·Î“½á, STRING“¿¡“¼­ “Ãâ“·Â“ÇÑ
+“´Ü“¾î“ÀÇ “¸®“½º“Æ®“¸¦ “Æò“°¡“ÇÕ“´Ï“´Ù.
+“ÀÌ“°Í“Àº “ÀÌ“·¡“ÀÇ “½Ä“°ú “´ë“Ã¼“·Î “¶È“°°“´Ù“°í “»ý“°¢“ÇÒ “¼ö “ÀÖ“½À“´Ï“´Ù.
 
     split(' ', q/STRING/);
 
@@ -3537,9 +3536,9 @@ this expression:
 
 =end original
 
-“êÞ“ª¤“ªÏ“¡¢’¼Â“ð·“ªÎ“«ê“«¹“«È“ªò“«³“«ó“«Ñ“«¤“«ë“ãÁ“ªË“ßæ“à÷“ª·“¡¢“«¹“««“«é“«³“«ó“«Æ“«­“«¹“«È“ªÇ“ªÏ“«ê“«¹“«È“ªÎ
-“õÌ“ý­“ªÎ“é©“áÈ“ªò“Ú÷“ª¹“ª³“ªÈ“ªÇ“ª¹“¡£
-’½¾“ªÃ“ªÆ“¡¢“ì¤“ù»“ªÎ“øú“úÞ“ªÏ:
+“´Ù“¸¥ “Á¡“ÀÌ “ÀÖ“´Ù“¸é, “½Ç“Á¦“ÀÇ “¸®“½º“Æ®“¸¦ “ÄÄ“ÆÄ“ÀÏ“ÇÒ “¶§“¿¡ “»ý“»ó“ÇÏ“°í, “½º“Ä®“¶ó“ÄÁ“ÅØ“½º“Æ®“¿¡“¼­“´Â
+“¸®“½º“Æ®“ÀÇ “¸¶“Áö“¸· “¿ä“¼Ò“¸¦ “¹Ý“È¯“ÇÏ“´Â “°Í“ÀÔ“´Ï“´Ù.
+“µû“¶ó“¼­, “¾Æ“·¡“ÀÇ “Ç¥“Çö“Àº
 
     qw(foo bar baz)
 
@@ -3549,7 +3548,7 @@ is semantically equivalent to the list:
 
 =end original
 
-“ì¤“ù»“ªÎ“«ê“«¹“«È“ªÈ“Ùþ“Ûö“îÜ“ªË“Ôõ’²Á“ªÇ“ª¹“¡£
+“¾Æ“·¡“ÀÇ “¸®“½º“Æ®“¿Í “¹®“¹ý“Àû“À¸“·Î “°°“½À“´Ï“´Ù.
 
     'foo', 'bar', 'baz'
 
@@ -3559,7 +3558,7 @@ Some frequently seen examples:
 
 =end original
 
-“ªè“ª¯“ú¼“ªÊ“ªï“ªì“ªë“ÖÇ“ªÈ“ª·“ªÆ“ªÏ“ì¤“ù»“ªÎ“ªâ“ªÎ“ªÇ“ª¹:
+“ÀÚ“ÁÖ “»ç“¿ë“µÇ“´Â “¿¹“Á¦“´Â “¾Æ“·¡“¿Í “°°“½À“´Ï“´Ù. 
 
     use POSIX qw( setlocale localeconv )
     @EXPORT = qw( foo bar baz );
@@ -3573,12 +3572,11 @@ produces warnings if the STRING contains the "," or the "#" character.
 
 =end original
 
-“ªè“ª¯“ª¢“ªë“Êà“êÞ“ª¤“ªÏ“¡¢’Ã±“åÞ“ªò“««“«ó“«Þ“ªÇ‘Çø“ï·“ªÃ“ª¿“ªê“¡¢“ÜÜ‘Êý“ú¼“ªÎ C<qw> “Ùþ“í®“Öª“ªÎ“ñé“ªË
-“«³“«á“«ó“«È“ªò“ßö“ª¤“ª¿“ªê“ª¹“ªë“ª³“ªÈ“ªÇ“ª¹“¡£
-“ª³“ªÎ“ª¿“ªá“ªË“¡¢C<usr warnings> “«×“«é“«°“«Þ“ªÈ B<-w> “«¹“«¤“«Ã“«Á
-(“ªÄ“ªÞ“ªê“¡¢C<$^W> ’ÊÑ‘Êý) “ªÏ STRING “ªË "," “ªä "#" “ªÎ“Ùþ“í®“ª¬“ìý“ªÃ“ªÆ“ª¤“ªë“ªÈ
-“Ìí“Í±“ªò“õó“ª·“ªÞ“ª¹“¡£
-
+“Á¾“Á¾ “Âø“°¢“ÇÏ“´Â “°Í“Àº, “´Ü“¾î“¸¦ “ÄÞ“¸¶“µ¥ “³ª“´©“°Å“³ª, “¿©“·¯“ÁÙ“ÀÇ C<qw> “¹®“ÀÚ“¿­“ÀÇ “¾È“¿¡
+“ÄÚ“¸à“Æ®“¸¦ “¾²“°Å“³ª “ÇÏ“´Â “°Í“ÀÔ“´Ï“´Ù.
+“ÀÌ “¶§“¹®“¿¡ C<use warnings> “ÇÁ“·¡“±×“¸¶“¿Í B<-w> “½º“À§“Ä¡
+(“Áï, C<$^W> “º¯“¼ö)“´Â STRING“¿¡ ","“³ª "#"“ÀÇ “¹®“ÀÚ“°¡ “µé“¾î“ÀÖ“À¸“¸é
+“°æ“°í“¸¦ “³À“´Ï“´Ù.
 
 =item tr/SEARCHLIST/REPLACEMENTLIST/cds
 X<tr> X<y> X<transliterate> X</c> X</d> X</s>
@@ -3596,12 +3594,12 @@ hash element, or an assignment to one of those, i.e., an lvalue.)
 
 =end original
 
-’¸¡“ßã“«ê“«¹“«È (SEARCHLIST) “ªË“ùß“ªÞ“ªì“ªë“Ùþ“í®“ªò“¡¢’ÂÐ’±þ“ª¹“ªë“öÇ“üµ“«ê“«¹“«È
-(REPLACEMENTLIST) “ªÎ“Ùþ“í®“ªË’ÊÑ“üµ“ª·“ªÞ“ª¹“¡£
-“öÇ“üµ“ªÞ“ª¿“ªÏ“Þû“ð¶“ª¬“ú¼“ªÊ“ªï“ªì“ª¿“¡¢“Ùþ“í®‘Êý“ªò“Ú÷“ª·“ªÞ“ª¹“¡£
-=~ “æÑ“ß©“í­“ªä =! “æÑ“ß©“í­“ªÇ“Ùþ“í®“Öª“ª¬“ò¦“ïÒ“ªµ“ªì“ªÆ“ª¤“ªÊ“ª±“ªì“ªÐ“¡¢$_ “ªÎ“Ùþ“í®“Öª“ª¬’ÊÑ“üµ“ªµ“ªì“ªÞ“ª¹“¡£
-(=~ “ªÇ“ò¦“ïÒ“ªµ“ªì“ªë“Ùþ“í®“Öª“ªÏ“¡¢“«¹“««“«é’ÊÑ‘Êý“¡¢“ÛÕ“Öª“é©“áÈ“¡¢“«Ï“«Ã“«·“«å“é©“áÈ“¡¢
-“ª¢“ªë“ª¤“ªÏ“ª³“ªì“ªé“ªØ“ªÎ“ÓÛ“ìý“ãÒ“ªÈ“ª¤“ªÃ“ª¿“ñ§’ÊÕ“ö·“ªÇ“ªÊ“ª±“ªì“ªÐ“ªÊ“ªê“ªÞ“ª»“ªó“¡£)
+“°Ë“»ö“¸®“½º“Æ® (SEARCHLIST) “¿¡ “Æ÷“ÇÔ“µÈ “¹®“ÀÚ“¸¦, “´ë“ÀÀ“ÇÏ“´Â “Ä¡“È¯“¸®“½º“Æ®(REPLACEMENTLIST)
+“ÀÇ “¹®“ÀÚ“·Î “º¯“È¯“ÇÕ“´Ï“´Ù.
+“Ä¡“È¯ “È¤“Àº “»è“Á¦“°¡ “¼ö“Çà“µÈ “¹®“ÀÚ“¼ö“¸¦ “¹Ý“È¯“ÇÕ“´Ï“´Ù.
+=~ “¿¬“»ê“ÀÚ“³ª =! “¿¬“»ê“ÀÚ“·Î “¹®“ÀÚ“¿­“ÀÌ “Áö“Á¤“µÇ“¾î“ÀÖ“Áö “¾Ê“À¸“¸é, $_ “¹®“ÀÚ“¿­“ÀÌ “º¯“È¯“µË“´Ï“´Ù.
+(=~ “·Î “Áö“Á¤“µÈ “¹®“ÀÚ“¿­“Àº “½º“Ä®“¶ó“º¯“¼ö, “¹è“¿­“¿ä“¼Ò, “ÇØ“½¬“¿ä“¼Ò, “È¤“Àº “ÀÌ“°Í“µé“¿¡ “´ë“ÀÔ“½Ä“ÀÎ
+“ÁÂ“º¯“°ª“ÀÌ “¾Æ“´Ï“¸é “¾È“µË“´Ï“´Ù.)
 
 =begin original
 
@@ -3614,13 +3612,13 @@ e.g., C<tr[A-Z][a-z]> or C<tr(+\-*/)/ABCD/>.
 
 =end original
 
-“Ùþ“í®“ªÎ“Ûô’°Ï“ªÏ“«Ï“«¤“«Õ“«ó“ªò“ÞÅ“ªÃ“ªÆ“ò¦“ïÒ“ªÇ“ª­“ªÞ“ª¹“¡£
-C<tr/A-J/0-9/> “ªÏ C<tr/ACEGIBDFHJ/0246813579/> “ªÈ“ÔÒ“ª¸“öÇ“üµ“ªò“ú¼“ª¤“ªÞ“ª¹“¡£
-B<sed> “ªÎ“ãá“äæ“íº“ªÎ“ª¿“ªá“ªË C<y> “ª¬ C<tr> “ªÎ“ÔÒ“ëù“åÞ“ªÈ“ª·“ªÆ“ð«“Íê“ªµ“ªì“ªÆ“ª¤“ªÞ“ª¹“¡£
-SEARCHLIST “ªò“ÎÀ“ûÁ“×¾“ªÇ“ÎÀ“ªÃ“ª¿“íÞ“ùê“ªË“ªÏ“¡¢
-REPLACEMENTLIST “éÄ“ªË“¡¢“ªâ“ª¦“ìé“ðÚ“ªÎ‘Çø“ï·“ªê“Ùþ“í®“ªò“éÄ“ëò“ª·“ªÞ“ª¹“¡£
-“ª³“ªì“ªÏ“¡¢“ÎÀ“ûÁ“×¾“ªÇ“ª¢“ªÃ“ªÆ“ªâ“¡¢“ªÊ“ª¯“ªÆ“ªâ“ª«“ªÞ“ª¤“ªÞ“ª»“ªó“¡£
-“ÖÇ: C<tr[A-Z][a-z]> “ªä C<tr(+\-*/)/ABCD/>“¡£
+“¹®“ÀÚ“ÀÇ “¹ü“À§“´Â “ÇÏ“ÀÌ“ÇÂ“À» “»ç“¿ë“ÇØ “Áö“Á¤“°¡“´É“ÇÕ“´Ï“´Ù.
+C<tr/A-J/0-9/> “´Â C<tr/ACEGIBDFHJ/0246813579/> “¿Í “°°“Àº “Ä¡“È¯“À» “¼ö“Çà“ÇÕ“´Ï“´Ù.
+B<sed> “ÀÇ “½Å“¾Ó“ÀÚ“¸¦ “À§“ÇØ C<y> “°¡ C<tr> “ÀÇ “µ¿“ÀÇ“¾î“·Î “Á¦“°ø“µÇ“°í “ÀÖ“½À“´Ï“´Ù.
+SEARCHLIST “ÀÇ “°ý“È£“·ù“·Î “°¨“½Î“Áø “°æ“¿ì“¿¡“´Â
+REPLACEMENTLIST “¿ë“À¸“·Î “ÇÑ“¹ø“´õ “ÇÑ“½Ö“ÀÇ “±¸“ºÐ“ÀÚ“¸¦ “ÁØ“ºñ“ÇÕ“´Ï“´Ù.
+“ÀÌ“°Í“Àº “°ý“È£“·ù“ÀÌ“µç “¾Æ“´Ï“µç “»ó“°ü“Àº “¾ø“½À“´Ï“´Ù.
+“¿¹“Á¦: C<tr[A-Z][a-z]> “³ª C<tr(+\-*/)/ABCD/>“¡£
 
 =begin original
 
@@ -3632,13 +3630,13 @@ using the C<s> operator if you need regular expressions.
 
 =end original
 
-C<tr> “ªÏ C<\d> “ªä C<[:lower:]> “ªÈ“ª¤“ªÃ“ª¿“ïá“Ð®“øú“úÞ“Ùþ“í®“«¯“«é“«¹“ªò
-B<“ÞÅ“ªï“ªÊ“ª¤> “ª³“ªÈ“ªË“ñ¼“ëò“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
-C<tr> “æÑ“ß©“í­“ªÏ tr(1) “«æ’¡¼“«Æ“«£“«ê“«Æ“«£“ªÈ“Ôõ’²Á“ªÇ“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“¡£
-“Ùþ“í®“Öª“ªÎ“ÓÞ“Ùþ“í®“á³“Ùþ“í®“ªò“«Þ“«Ã“«×“ª·“ª¿“ª¤“íÞ“ùê“ªÏ“¡¢
-L<perlfunc/lc> “ªÈ L<perlfunc/uc> “ªò‘²Î“ðÎ“ª·“ªÆ“ù»“ªµ“ª¤“¡£
-“ªÞ“ª¿“ïá“Ð®“øú“úÞ“ª¬“ù±“é©“ªÊ“íÞ“ùê“ªË“ªÏ“ìé“Úõ“îÜ“ªË C<s> “æÑ“ß©“í­“ªò“ÞÅ“ª¦“ª³“ªÈ“ªò
-“ÍÅ“Õç“ª·“ªÆ“ªß“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
+C<tr> “Àº C<\d> “³ª C<[:lower:]> “°°“Àº “Á¤“±Ô“Ç¥“Çö“¹®“ÀÚ“Å¬“·¡“½º“¸¦ 
+B<“»ç“¿ë“ÇÏ“Áö “¾Ê“´Â “°Í>“¿¡ “ÁÖ“ÀÇ“ÇÏ“¼¼“¿ä.
+C<tr> “¿¬“»ê“ÀÚ“´Â tr(1) “À¯“Æ¿“¸®“Æ¼“¿Í “°°“Àº “°Ô “¾Æ“´Õ“´Ï“´Ù.
+“¹®“ÀÚ“¿­“ÀÇ “´ë“¹®“ÀÚ/“¼Ò“¹®“ÀÚ“¸¦ “¸Å“ÇÎ“ÇÏ“°í “½Í“À» “¶§“´Â
+L<perlfunc/lc> “¿Í L<perlfunc/uc> “¸¦ “Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä. 
+“¶Ç “Á¤“±Ô“Ç¥“Çö“ÀÌ “ÇÊ“¿ä“ÇÑ “°æ“¿ì“¿¡“´Â “ÀÏ“¹Ý“Àû“À¸“·Î C<s> “¿¬“»ê“ÀÚ“¸¦ “»ç“¿ë“ÇÏ“´Â “°Í“À»
+“°í“·Á“ÇØ“ÁÖ“¼¼“¿ä.
 
 =begin original
 
@@ -3651,13 +3649,13 @@ character sets in full.
 
 =end original
 
-“Ûô’°Ï“ò¦“ïÒ“ªÈ“ª¤“ª¦“ÍÅ“ª¨“Û°“ªÏ“Ùþ“í®“«»“«Ã“«È“ª¬“ì¶“ªÊ“ªë“íÞ“ùê“ªÏ“ªä“ªä“ì¹“ãÕ“àõ“ªË“ýâ“ª±“ªë“ª³“ªÈ“ªË“ªâ
-“ñ¼“ëò“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤ -- “ª½“ª·“ªÆ“ÔÒ“ª¸“Ùþ“í®“«»“«Ã“«È“ªÇ“ªâ“Íð“ªé“ª¯“Ñ¢“Óâ“ª·“ªÆ“ª¤“ªë“ªÎ“ªÈ“ªÏ“êÞ“ª¦
-“Ì¿“Íý“ªò“ìÚ“ª­“ÑÃ“ª³“ª¹“ª³“ªÈ“ªâ“ª¢“ªê“ªÞ“ª¹“¡£
-“Ëí“îï“ªÊ“ê«“öÎ“ªÈ“ª·“ªÆ“ªÏ“¡¢“Ûô’°Ï“ªÎ“õÌ“ôø“ªÈ“õÌ“ý­“ªò“ªÉ“ªÁ“ªé“ªâ“«¢“«ë“«Õ“«¡“«Ù“«Ã“«È
-(“ÓÞ“Ùþ“í®“á³“Ùþ“í®“ªâ“ÔÒ“ª¸)(a-e, A-E)“ªË“ª¹“ªë“ª«“¡¢“ªÉ“ªÁ“ªé“ªâ‘Êý“í®“ªË“ª¹“ªë(0-4)“ª³“ªÈ“ªÇ“ª¹“¡£
-“ª½“ªì“ì¤“èâ“ªÏ“îï“ªÆ“äÌ“îï“ªÇ“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“¡£
-“ë÷“ªï“ª·“ª¤“ªÈ“ª­“ªÏ“¡¢“Ùþ“í®“«»“«Ã“«È“ªò“èÇ“îï“ªË“ßö“ª­“õó“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
+“¹ü“À§“Áö“Á¤“ÀÌ“¶ó“´Â “»ý“°¢“Àº “¹®“ÀÚ“¼Â“ÀÌ “´Ù“¸¥ “°æ“¿ì“´Â “´õ“¿í “ÀÌ“½Ä“¼º“¿¡ “Èì“ÀÌ “°¡“´Â “°Í“¿¡“µµ
+“ÁÖ“ÀÇ“ÇØ“ÁÖ“¼¼“¿ä. -- “±×“¸®“°í “°°“Àº“¹®“ÀÚ“¼Â“ÀÌ“¾î“µµ “È¤“¿©“³ª “±â“´ë“ÇÏ“°í “ÀÖ“´Â “°Í“°ú“´Â
+“´Ù“¸¥ “°á“°ú“¸¦ “ºÒ“·¯“ÀÏ“À¸“Å³ “¼ö“µµ “ÀÖ“½À“´Ï“´Ù.
+“°Ç“Àü“ÇÑ “¿ø“Ä¢“Àº “¹ü“À§“ÀÇ “Ã³“À½“°ú “³¡“À» “¾Ë“ÆÄ“ºª(“´ë“¹®“ÀÚ/“¼Ò“¹®“ÀÚ“µµ “°°“ÀÌ, a-e, A-E)
+“·Î “ÇÏ“µç“°¡, “¼ý“ÀÚ(0-4)“·Î “ÇÏ“´Â “°¡ “ÀÔ“´Ï“´Ù. 
+“±× “¿Ü“¿¡“´Â “Àü“ºÎ “¾È“Àü“ÇÏ“Áö “¾Ê“½À“´Ï“´Ù.
+“ÀÇ“¹®“ÀÌ “µé“¶§“´Â “¹®“ÀÚ“¼Â“À» “¿Ï“Àü“È÷ “»Ì“¾Æ“º¸“¼¼“¿ä.
 
 =begin original
 
@@ -3665,7 +3663,7 @@ Options:
 
 =end original
 
-“«ª“«×“«·“«ç“«ó“ªÏ“ì¤“ù»“ªÎ“÷×“ªê“ªÇ“ª¹:
+“¿É“¼Ç“Àº “¾Æ“·¡“¿Í “°°“½À“´Ï“´Ù. 
 
 =begin original
 
@@ -3675,9 +3673,9 @@ Options:
 
 =end original
 
-    c   SEARCHLIST “ªò“ÜÍ“ó¢“ùê“ªË“ª¹“ªë
-    d   “Ì¸“ªÄ“ª«“ªÃ“ª¿“ª¬“öÇ“üµ“ªµ“ªì“ªÊ“ª«“ªÃ“ª¿“Ùþ“í®“ªò“Þû“ð¶“ª¹“ªë
-    s   “öÇ“üµ“ªµ“ªì“ª¿“Ùþ“í®“ª¬“ñì“ªÊ“ªÃ“ª¿“ªÈ“ª­“ªË’°µ“õê“ª¹“ªë
+    c   SEARCHLIST “¸¦ “º¸“Áý“ÇÕ“À¸“·Î “ÇÕ“´Ï“´Ù. 
+    d   “Ã£“¾Ò“Áö“¸¸ “Ä¡“È¯“µÇ“Áö “¾Ê“Àº “¹®“ÀÚ“¸¦ “»è“Á¦“ÇÕ“´Ï“´Ù. 
+    s   “Ä¡“È¯“µÈ“¹®“ÀÚ“°¡ “Áß“º¹“µÈ “°æ“¿ì“¿¡“´Â “¾Ð“Ãà“ÇÕ“´Ï“´Ù. 
 
 =begin original
 
@@ -3692,14 +3690,12 @@ to a single instance of the character.
 
 =end original
 
-C</c> “áó“ãÞ“í­“ª¬“ò¦“ïÒ“ªµ“ªì“ªë“ªÈ“¡¢SEARCHLIST “ªË“ªÏ“ÜÍ“ó¢“ùê“ª¬“ò¦“ïÒ“ªµ“ªì“ª¿“ªâ“ªÎ“ªÈ
-“ú°’¼á“ªµ“ªì“ªÞ“ª¹“¡£
-C</d> “áó“ãÞ“í­“ª¬“ò¦“ïÒ“ªµ“ªì“ªë“ªÈ“¡¢SEARCHLIST “ªË“ò¦“ïÒ“ªµ“ªì“ªÆ“¡¢
-REPLACEMENTLIST “ªË’ÂÐ’±þ“ª¹“ªë“ªâ“ªÎ“ª¬“ªÊ“ª¤“Ùþ“í®“ª¬“Þû“ð¶“ªµ“ªì“ªÞ“ª¹“¡£
-(“ª³“ªì“ªÏ“¡¢SEARCHLIST “ªÇ“Ì¸“ªÄ“ª«“ªÃ“ª¿“ªâ“ªÎ“ªò“Þû“ð¶“ª¹“ªë“¡¢“ª¿“ªÀ“ª½“ªì“ªÀ“ª±“ªÎ“¡¢“ª¢“ªë“ðú“ªÎ
-B<tr> “«×“«í“«°“«é“«à“ªÎ“ÔÑ“íÂ“ªè“ªê“ªÈ“Ýï“ªÙ“ªì“ªÐ“¡¢“ª¤“ª¯“ÝÂ“êõ“æã“ªÊ“ªâ“ªÎ“ªË“ªÊ“ªÃ“ªÆ“ª¤“ªÞ“ª¹“¡£)
-C</s> “áó“ãÞ“í­“ª¬“ò¦“ïÒ“ªµ“ªì“ªë“ªÈ“¡¢“ÔÒ“ª¸“Ùþ“í®“ªË“Ùþ“í®’ÊÑ“üµ“ªµ“ªì“ª¿“Ùþ“í®“ªÎ˜­å“ªÓ“ªò“¡¢
-“ª½“ªÎ“Ùþ“í® 1 “Ùþ“í®“ªÀ“ª±“ªË’°µ“õê“ª·“ªÞ“ª¹“¡£“¡¡
+C</c> “¼ö“½Ä“ÀÚ“°¡ “Áö“Á¤“µÇ“¸é, SEARCHLIST “¿¡“´Â “º¸“Áý“ÇÕ“ÀÌ “Áö“Á¤“µÈ “°Í“À¸“·Î
+“ÇØ“¼®“µË“´Ï“´Ù.
+C</d> “¼ö“½Ä“ÀÚ“°¡ “Áö“Á¤“µÇ“¸é SEARCHLIST“·Î “Áö“Á¤“µÈ
+REPLACEMENTLIST “¿¡ “´ë“ÀÀ“ÇÏ“´Â “°Í“ÀÌ “¾ø“´Â “¹®“ÀÚ“°¡ “»è“Á¦“µË“´Ï“´Ù.
+C</s> “¼ö“½Ä“ÀÚ“°¡ “Áö“Á¤“µÇ“¸é, “°°“Àº “¹®“ÀÚ“¿¡ “¹®“ÀÚ“Ä¡“È¯“µÈ “¹®“ÀÚ“ÀÇ “³ª“¿­“À»
+1“¹®“ÀÚ“¸¸“À¸“·Î “¾Ð“Ãà“ÇÕ“´Ï“´Ù.
 
 =begin original
 
@@ -3712,14 +3708,13 @@ squashing character sequences in a class.
 
 =end original
 
-C</d> “áó“ãÞ“í­“ª¬“ÞÅ“ªï“ªì“ªë“ªÈ“¡¢REPLACEMENTLIST “ªÏ“¡¢“ßÈ“ªË“ò¦“ïÒ“ªµ“ªì“ª¿“÷×“ªê“ªË
-“ú°’¼á“ªµ“ªì“ªÞ“ª¹“¡£
-C</d> “ª¬“ò¦“ïÒ“ªµ“ªì“ªÊ“ª¤“íÞ“ùê“ªÇ“¡¢REPLACEMENTLIST “ª¬ SEARCHLIST “ªè“ªê“ªâ“Ó­“ª¤“ªÈ“¡¢
-“ÔÒ“ª¸“íþ“ªµ“ªË“ªÊ“ªë“ªÞ“ªÇ“¡¢REPLACEMENTLIST “ªÎ“õÌ“ý­“ªÎ“Ùþ“í®“ª¬
-“ðÛ“ªê“Ú÷“ªµ“ªì“ªÆ“ª¤“ªë“ªâ“ªÎ“ªÈ“ª·“ªÆ“Ðâ“ªï“ªì“ªÞ“ª¹“¡£
-REPLACEMENTLIST “ª¬“Íö“Ùþ“í®“Öª“ªÇ“ªÎ“ªÈ“ª­“ªË“ªÏ“¡¢SEARCHLIST “ªÈ“ÔÒ“ª¸“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-“ý­“íº“ªÏ“¡¢“ª¢“ªë“Ùþ“í®“«¯“«é“«¹“ªË“ùß“ªÞ“ªì“ªë“Ùþ“í®‘Êý“ªò‘Êý“ª¨“ªë“ªÈ“ª­“ªä“¡¢
-“ª¢“ªë“Ùþ“í®“«¯“«é“«¹“ªÎ“Ùþ“í®“ªÎ˜­å“ªÓ“ªò’°µ“õê“ª¹“ªë“ªè“ª¦“ªÊ“ªÈ“ª­“ªË“øµ“××“ªÇ“ª¹“¡£
+C</d> “¼ö“½Ä“ÀÚ“°¡ “»ç“¿ë“µÇ“¸é, REPLACEMENT “´Â “Ç×“»ó “Áö“Á¤“µÈ “´ë“·Î
+“ÇØ“¼®“µË“´Ï“´Ù.
+“±×“·¸“Áö “¾Ê“Àº “°æ“¿ì“¿¡“´Â REPLACEMENTLIST “°¡ SEARCHLIST “º¸“´Ù“µµ “Âª“À¸“¸é
+“¹Ý“º¹“µÈ “°Í“À¸“·Î “Ãë“±Þ“ÇÕ“´Ï“´Ù.
+REPLACEMENTLIST “°¡ “ºó“¹®“ÀÚ“¿­“ÀÎ “¶§“´Â, SEARCHLIST“¿Í “°°“¾Æ“Áý“´Ï“´Ù.
+“ÈÄ“ÀÚ“´Â “¾î“¶² “¹®“ÀÚ“Å¬“·¡“½º“¿¡ “Æ÷“ÇÔ“µÈ “¹®“ÀÚ“¼ö“¸¦ “¼¼“´Â “¶§“³ª
+“¾î“¶² “¹®“ÀÚ“Å¬“·¡“½º“ÀÇ “¹®“ÀÚ“ÀÇ “³ª“¿­“À» “¾Ð“Ãà“ÇÏ“´Â “°Í “°°“Àº “¶§“¿¡ “Æí“¸®“ÇÕ“´Ï“´Ù.
 
 =begin original
 
@@ -3727,7 +3722,7 @@ Examples:
 
 =end original
 
-“ÖÇ:
+“¿¹“Á¦:
 
     $ARGV[1] =~ tr/A-Z/a-z/;	# canonicalize to lower case
 
@@ -3753,7 +3748,7 @@ first one is used:
 
 =end original
 
-“ÜÜ‘Êý“ªÎ“Ùþ“í®’ÊÑ“üµ“ª¬“ìé“ªÄ“ªÎ“Ùþ“í®“ªË“ªÄ“ª¤“ªÆ“ò¦“ïÒ“ªµ“ªì“ªë“ªÈ“¡¢“õÌ“ôø“ªÎ“ªâ“ªÎ“ªÀ“ª±“ª¬“ÞÅ“ªï“ªì“ªÞ“ª¹“¡£
+“¿©“·¯“°³“ÀÇ “¹®“ÀÚ“º¯“È¯“ÀÌ “ÇÏ“³ª“ÀÇ “¹®“ÀÚ“¿¡ “ÀÇ“ÇØ “Áö“Á¤“µÇ“¸é, “¸Ç“Ã³“À½ “°Í“¸¸ “»ç“¿ë“µË“´Ï“´Ù.
 
     tr/AAA/XYZ/
 
@@ -3763,7 +3758,7 @@ will transliterate any A to X.
 
 =end original
 
-“ªÏ A “ªò X “ªË’ÊÑ“üµ“ª·“ªÞ“ª¹“¡£
+“´Â A “¸¦ X “·Î “º¯“È¯“ÇÕ“´Ï“´Ù. 
 
 =begin original
 
@@ -3774,9 +3769,9 @@ must use an eval():
 
 =end original
 
-’ÊÑ“üµ“«Æ’¡¼“«Ö“«ë“ªÏ“«³“«ó“«Ñ“«¤“«ë“ãÁ“ªË“íÂ“ªé“ªì“ªë“ªÎ“ªÇ“¡¢SEARCHLIST “ªâ
-REPLACEMENTLIST “ªâ“«À“«Ö“«ë“«¯“«©’¡¼“«È“î÷“ËÒ“ªÎ’ÂÐ“ßÚ“ªÈ“ªÏ“ªÊ“ªê“ªÞ“ª»“ªó“¡£
-’ÊÑ‘Êý“ªò“ÞÅ“ª¤“ª¿“ª¤“íÞ“ùê“ªË“ªÏ“¡¢eval() “ªò“ÞÅ“ªï“ªÊ“ª±“ªì“ªÐ“ªÊ“ªé“ªÊ“ª¤“ªÈ“ª¤“ª¦“ª³“ªÈ“ªÇ“ª¹:
+“Ä¡“È¯“Å×“ÀÌ“ºí“Àº “ÄÄ“ÆÄ“ÀÏ“ÇÒ “¶§“¿¡ “¸¸“µé“¾î“Áö“±â“¶§“¹®“¿¡ SEARCHLIST “µµ
+REPLACEMENTLIST “µµ “½Ö“µû“¿È“Ç¥ “Àü“°³“ÀÇ “´ë“»ó“ÀÌ “µÇ“Áö “¾Ê“½À“´Ï“´Ù.
+“º¯“¼ö“¸¦ “»ç“¿ë“ÇÏ“°í “½Í“À» “¶§“¿¡“´Â,  eval() “À» “»ç“¿ë“ÇÏ“Áö“¾Ê“À¸“¸é “¾È“µË“´Ï“´Ù.
 
     eval "tr/$oldlist/$newlist/";
     die $@ if $@;
@@ -3795,9 +3790,10 @@ the terminating string are the value of the item.
 
 =end original
 
-“«¯“«©’¡¼“«È“ªÎ“ú¼“ò¦“ú¾“û¡“ãÒ“ªÏ“¡¢“«·“«§“«ë“ªÎ“¡¸“«Ò“«¢“«É“«­“«å“«á“«ó“«È“¡¹“Ï°“Ùþ“ªò“Ðñ“ªË“ª·“ªÆ“ª¤“ªÞ“ª¹“¡£
-C<< << >> “ªË“ìÚ“ª­’Â³“ª¤“ªÆ“¡¢“«¯“«©’¡¼“«È“ªµ“ªì“ªë“«Æ“«­“«¹“«È“ªò“ðû“Öõ“ªµ“ª»“ªë“Ùþ“í®“Öª“ªò“ò¦“ïÒ“ªÇ“ª­“¡¢
-“úÞ“î¤“ªÎ“ú¼“ªÎ“ó­“ªÎ“ú¼“ª«“ªé“ðû“Ó®“Ùþ“í®“Öª“ªÞ“ªÇ“ªÎ“îï“ªÆ“ªÎ“ú¼“ª¬“ª½“ªÎ“ú£“ÙÍ“ªÎ“ö·“ªÈ“ªÊ“ªê“ªÞ“ª¹“¡£
+“µû“¿È“Ç¥“ÀÇ “Çà“Áö“Çâ“Çü“½Ä“Àº “¼Ð“ÀÇ "Here-Document" “±¸“¹®“À» “±â“º»“À¸“·Î “ÇÏ“°í “ÀÖ“½À“´Ï“´Ù.
+C<< << >> “¿¡“¼­ “°è“¼Ó“ÇØ“¼­ “µû“¿È“Ç¥“·Î “°¨“½Î“Áø “ÅØ“½º“Æ®“¸¦ “Á¾“·á“ÇÏ“°Ô“ÇÏ“´Â “¹®“ÀÚ“¿­“À» “Áö“Á¤
+“ÇÒ “¼ö “ÀÖ“°í, “Çö“Àç“ÀÇ “Çà“ÀÇ “´Ù“À½“Çà “¿¡“¼­ “Á¾“´Ü“¹®“ÀÚ“¿­“±î“Áö“ÀÇ “¸ð“µç “Çà“ÀÌ “±× “Ç×“¸ñ“ÀÇ
+“°ª“ÀÌ “µË“´Ï“´Ù.
 
 =begin original
 
@@ -3811,14 +3807,14 @@ first empty line.)  The terminating string must appear by itself
 
 =end original
 
-“ðû“Ó®“Ùþ“í®“Öª“ªË“ªÏ“¡¢“ãÛ“Ü¬“í­(’Ã±“åÞ) “ª«“«¯“«©’¡¼“«È“ªµ“ªì“ª¿“«Æ“«­“«¹“«È“ª¬“ÞÅ“ª¨“ªÞ“ª¹“¡£
-“«¯“«©’¡¼“«È“ªµ“ªì“ªÆ“ª¤“ªÊ“ª¤“ãÛ“Ü¬“í­“ªÏ“¡¢“«À“«Ö“«ë“«¯“«©’¡¼“«È“ªÎ“ªè“ª¦“ªË“Ðâ“ªï“ªì“ªÞ“ª¹“¡£
-“ãÛ“Ü¬“í­“ª¬“«¯“«©’¡¼“«È“ªµ“ªì“ªÆ“ª¤“ªÊ“ª¤“íÞ“ùê“ªÏ“¡¢C<< << >> “ªÈ“ãÛ“Ü¬“í­“ªÎ“Êà“ªË
-“Íö“ÛÜ“ªò“ìý“ªì“ªÆ“ªÏ“ª¤“ª±“ªÞ“ª»“ªó“¡£
-(“ªâ“ª·“Íö“ÛÜ“ªò“ìý“ªì“ªë“ªÈ“¡¢“Íö“ãÛ“Ü¬“í­“ªÈ“ª·“ªÆ“Ðâ“ªï“ªì“ªÞ“ª¹; “ª³“ªì“ªÏ“êó’¸ú“ªÇ“¡¢
-“õÌ“ôø“ªÎ“Íö“ú¼“ªË“«Þ“«Ã“«Á“ª¹“ªë“ªè“ª¦“ªË“ªÊ“ªê“ªÞ“ª¹“¡£)
-“ðû“Ó®“Ùþ“í®“Öª“ªÏ“ðû“Ó®“ú¼“ªË’Ã±‘Ìå“ªÇ(“«¯“«©’¡¼“«È“ªµ“ªì“ªº“¡¢“îñ“ý­“ªË“ªâ“Íö“ÛÜ“ªÊ“ª·“ªÇ)
-“úÞ“ªì“ªÊ“ª±“ªì“ªÐ“ªÊ“ªê“ªÞ“ª»“ªó“¡£
+“Á¾“´Ü“¹®“ÀÚ“¿­“¿¡“´Â, “½Ä“º°“ÀÚ(“´Ü“¾î) “°¡ “µû“¿È“Ç¥“·Î “ÃÄ“Áø “ÅØ“½º“Æ®“¸¦ “»ç“¿ë“ÇÒ “¼ö “ÀÖ“½À“´Ï“´Ù.
+“ÀÌ “½Ä“º°“ÀÚ“´Â “½Ö“µû“¿È“Ç¥“°°“ÀÌ “Ãë“±Þ“µË“´Ï“´Ù.
+“½Ä“º°“ÀÚ“°¡ “µû“¿È“Ç¥“ÃÄ“ÀÖ“Áö “¾Ê“Àº “°æ“¿ì C<< << >> “¿Í “½Ä“º°“ÀÚ“ÀÇ “»ç“ÀÌ“¿¡
+“°ø“¹é“À» “³Ö“À» “¼ö “¾ø“½À“´Ï“´Ù.
+(“¸¸“¾à “°ø“¹é“À» “³Ö“À¸“¸é, “ºó“½Ä“º°“ÀÚ“·Î“½á “Ãë“±Þ“µË“´Ï“´Ù; “ÀÌ“°Í“Àº “À¯“È¿“ÇÏ“¸ç,
+“ÃÖ“ÃÊ“ÀÇ “ºó“Çà“ÀÌ “¸Å“Ä¡“ÇÏ“°Ô “µË“´Ï“´Ù.)
+“Á¾“´Ü“¹®“ÀÚ“¿­“Àº “Á¾“´Ü“Çà“¿¡ “´Ü“Ã¼“·Î(“µû“¿È“Ç¥“¾ø“À¸“¸ç, “¾Õ“µÚ“¿¡ “°ø“¹é“¾ø“ÀÌ“µµ)
+“³ª“Å¸“³ª“Áö “¾Ê“½À“´Ï“´Ù.
 
 =begin original
 
@@ -3827,8 +3823,8 @@ the treatment of the text.
 
 =end original
 
-“ðû“Ó®“Ùþ“í®“Öª“ª¬“«¯“«©’¡¼“«È“ªµ“ªì“ªÆ“ª¤“ªë“íÞ“ùê“ªË“ªÏ“¡¢“ª½“ªÎ“«¯“«©’¡¼“«È“ªÎ“ðú“×¾“ªË“ªè“ªÃ“ªÆ“¡¢
-“«¯“«©’¡¼“«È“ªµ“ªì“ªë“«Æ“«­“«¹“«È“ªÎ“Ðâ“ª¤“Ì½“ªá“ªé“ªì“ªÞ“ª¹“¡£
+“Á¾“´Ü“¹®“ÀÚ“¿­“ÀÌ “µû“¿È“Ç¥ “ÃÄ“Áö“Áö “¾Ê“Àº “°æ“¿ì“¿¡“´Â, “±× “µû“¿È“Ç¥“ÀÇ “Á¾“·ù“¿¡ “ÀÇ“ÇØ,
+“µû“¿È“Ç¥“µÇ“¾î“Áø “ÅØ“½º“Æ®“ÀÇ “¾î“¶»“°Ô “´Ù“·ê “Áö “°á“Á¤“ÇÕ“´Ï“´Ù.
 
 =over 4
 
@@ -3914,7 +3910,7 @@ It is possible to stack multiple here-docs in a row:
 
 =end original
 
-“ÜÜ‘Êý“ªÎ“«Ò“«ä“«É“«­“«å“«á“«ó“«È“ªò“Ö§’Â³“ª·“ªÆ“«¹“«¿“«Ã“«¯“ª¹“ªë“ª³“ªÈ“ªâ“Ê¦“Òö“ªÇ“ª¹:
+“º¹“¼ö“ÀÇ here-docs“¸¦ “¿¬“¼Ó“ÇØ“¼­ “½º“ÅÃ“ÇÏ“´Â “°Í“µµ “°¡“´É“ÇÕ“´Ï“´Ù.
 
        print <<"foo", <<"bar"; # you can stack them
     I said foo.
@@ -3937,9 +3933,9 @@ try to do this:
 
 =end original
 
-“ì¤“ù»“ªÎ“ªè“ª¦“ªÊ“ª³“ªÈ“ªò“ª·“ª¿“ª¤“ªÎ“ªÇ“ªÏ“ªÊ“ª¤“ªÈ“ª¤“ª¦“ª³“ªÈ“ª¬ Perl “ªË“ªÏ“ªï“ª«“ªé“ªÊ“ª¤“ªÎ“ªÇ“¡¢
-“Ùþ“ªò“ðû“ªï“ªé“ª»“ªë“ª¿“ªá“ªË“ªÏ“ØÇ“Ú­“ªË“«»“«ß“«³“«í“«ó“ªò“ªÄ“ª±“ªÊ“ª±“ªì“ªÐ“ªÊ“ªé“ªÊ“ª¤“ª³“ªÈ“ªò
-“ØÎ“ªì“ªÊ“ª¤“ªÇ“ù»“ªµ“ª¤:
+“¾Æ“·¡“¿Í “°°“Àº “°Í“À» “ÇÏ“°í“½Í“Àº “°Ô “¾Æ“´Ò“±î “ÇÏ“´Â “°Í“ÀÌ Perl “¿¡“°Ô “¸ð“¸£“´Â “°Í“ÀÌ“±â“¿¡,
+“¹®“Àå “³¡“³»“±â“À§“ÇØ “¸Ç“¸¶“Áö“¸·“¿¡ “¼¼“¹Ì“ÄÝ“·Ð“À» “ºÙ“ÀÌ“Áö “¾Ê“À¸“¸é “¾È“µÈ“´Ù“´Â “°Í“À»
+“ÀØ“Áö “¸»“¾Æ“ÁÖ“¼¼“¿ä.
 
        print <<ABC
     179231
@@ -3953,7 +3949,7 @@ use C<chomp()>.
 
 =end original
 
-“«Ò“«ä“«É“«­“«å“«á“«ó“«È“ª«“ªé“ú¼“ðû“Ó®“í­“ªò“ð¶“ËÛ“ª·“ª¿“ª¤“íÞ“ùê“ªÏ“¡¢C<chomp()> “ªò“ÞÅ“ªÃ“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
+here-docs “¿¡“¼­ “Çà“Á¾“´Ü“ÀÚ“¸¦ “¾ø“¾Ö“°í “½Í“À»“¶§“´Â, C<chomp()> “¸¦ “»ç“¿ë“ÇÏ“¼¼“¿ä.
 
     chomp($string = <<'END');
     This is a string.
@@ -3966,8 +3962,8 @@ you'll need to remove leading whitespace from each line manually:
 
 =end original
 
-“«Ò“«¢“«É“«­“«å“«á“«ó“«È“ªò“«½’¡¼“«¹“ªÎ“ªÛ“ª«“ªÎ“Ý»“ÝÂ“ª«“ªé“«¤“«ó“«Ç“«ó“«È“ª·“ª¿“ª¤“íÞ“ùê“¡¢
-“ÊÀ“ú¼“ªÎ“à»“Ôé“ªÎ“Íö“ÛÜ“ªÏ“â¢“ÔÑ“ªÇ“ö¢“ªê“ð¶“ª¯“ù±“é©“ª¬“ª¢“ªê“ªÞ“ª¹:
+here-docs“¸¦ “¼Ò“½º“ÀÌ“¿Ü“ÀÇ “ºÎ“ºÐ“¿¡“¼­ “ÀÎ“µ§“Æ®“ÇÏ“°í “½Í“À» “¶§“´Â
+“°¢ “Çà“ÀÇ “¸Ç “¾Õ“ÀÇ “°ø“¹é“Àº “¼ö“µ¿“À¸“·Î “¾ø“¾Ù “ÇÊ“¿ä“°¡ “ÀÖ“½À“´Ï“´Ù.
 
     ($quote = <<'FINIS') =~ s/^\s+//gm;
        The Road goes ever on and on,
@@ -3982,9 +3978,9 @@ So instead of
 
 =end original
 
-C<s///eg> “ªÎ“ªè“ª¦“ªÊ“«Ç“«ê“«ß“«¿“Ï°“ðã“ªÎ“ñé“ªÇ“«Ò“«¢“«É“«­“«å“«á“«ó“«È“ªò“ÞÅ“ª¦“íÞ“ùê“¡¢
-“«¯“«©’¡¼“«È“ªµ“ªì“ª¿“ªâ“ªÎ“ªÏ“õÌ“ý­“ªÎ“«Ç“«ê“«ß“«¿“ªË“ìÚ“ª­’Â³“ª¯“ªâ“ªÎ“ªÈ“ª·“ªÆ‘À´“ªÊ“ª±“ªì“ªÐ“ªÊ“ªê“ªÞ“ª»“ªó“¡£
-’½¾“ªÃ“ªÆ“¡¢“ì¤“ù»“ªÎ“ªè“ª¦“ªÇ“ªÏ“ªÊ“ª¯:
+C<s///eg> “°°“Àº “±¸“ºÐ“ÀÚ“±¸“Á¶“ÀÇ “¾È“¿¡“¼­ here-docs“¸¦ “»ç“¿ë“ÇÏ“´Â “°æ“¿ì,
+“µû“¿È“Ç¥ “ÃÄ“Áø “°Í“Àº “¸¶“Áö“¸·“ÀÇ “±¸“ºÐ“ÀÚ“¿¡ “ÀÌ“¾î“Áø “°Í“À¸“·Î“½á “¿À“Áö “¾Ê“À¸“¸é “¾È“µË“´Ï“´Ù.
+“µû“¶ó“¼­, “¾Æ“·¡“¿Í “°°“Àº “°Í“ÀÌ “¾Æ“´Ï“¶ó;
 
     s/this/<<E . 'that'
     the other
@@ -3997,7 +3993,7 @@ you have to write
 
 =end original
 
-“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ßö“ª«“ªÊ“ª±“ªì“ªÐ“ªÊ“ªê“ªÞ“ª»“ªó:
+“¾Æ“·¡“¿Í “°°“ÀÌ “¾²“Áö “¾Ê“À¸“¸é “¾È“µË“´Ï“´Ù.
 
     s/this/<<E . 'that'
      . 'more '/eg;
@@ -4012,10 +4008,10 @@ warning B<Can't find string terminator "END" anywhere before EOF...>.
 
 =end original
 
-“«×“«í“«°“«é“«à“ªÎ“õÌ“ý­“ªÎ“ú¼“ªË“ðû“Ó®“ãÛ“Ü¬“í­“ª¬“ª¢“ªë“íÞ“ùê“¡¢“ª½“ªÎ“ý­“ªË“ªÏ
-“ËÇ“ú¼“ª¬“ªÊ“ª±“ªì“ªÐ“ªÊ“ªê“ªÞ“ª»“ªó; “ªµ“ªâ“ªÊ“ª±“ªì“ªÐ“¡¢Perl “ªÏ
-B<Can't find string terminator "END" anywhere before EOF...> “ªÈ“ª¤“ª¦
-“Ìí“Í±“ªò“õó“ª·“ªÞ“ª¹“¡£
+“ÇÁ“·Î“±×“·¥“ÀÇ “¸¶“Áö“¸· “Çà“¿¡ “Á¾“´Ü“½Ä“º°“ÀÚ“°¡ “ÀÖ“´Â “°æ“¿ì, “±× “µÚ“¿¡“´Â
+“°³“Çà“ÀÌ “¾ø“À¸“¸é “¾È“µË“´Ï“´Ù; “±×“·¸“Áö “¾Ê“À¸“¸é Perl “Àº
+B<Can't find string terminator "END" anywhere before EOF ...>“ÀÌ“¶ó“´Â
+“°æ“°í“¸¦ “³À“´Ï“´Ù.
 
 =begin original
 
