--- a/trunk/perldoc/ko/perl/5.10/perlop.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlop.pod
@@ -3979,7 +3979,7 @@ So instead of
 =end original
 
 C<s///eg> “°°“Àº “±¸“ºÐ“ÀÚ“±¸“Á¶“ÀÇ “¾È“¿¡“¼­ here-docs“¸¦ “»ç“¿ë“ÇÏ“´Â “°æ“¿ì,
-“µû“¿È“Ç¥ “ÃÄ“Áø “°Í“Àº “¸¶“Áö“¸·“ÀÇ “±¸“ºÐ“ÀÚ“¿¡ “ÀÌ“¾î“Áø “°Í“À¸“·Î“½á “¿À“Áö “¾Ê“À¸“¸é “¾È“µË“´Ï“´Ù.
+“ÀÎ“¿ë“µÈ “°Í“Àº “¸¶“Áö“¸·“ÀÇ “±¸“ºÐ“ÀÚ“¿¡ “ÀÌ“¾î“Áø “°Í“À¸“·Î“½á “¿À“Áö “¾Ê“À¸“¸é “¾È“µË“´Ï“´Ù.
 “µû“¶ó“¼­, “¾Æ“·¡“¿Í “°°“Àº “°Í“ÀÌ “¾Æ“´Ï“¶ó;
 
     s/this/<<E . 'that'
@@ -4022,10 +4022,9 @@ backslashing the quoting character:
 
 =end original
 
-“ªµ“ªé“ªË“¡¢“Ùþ“í®“Öª“ðû“Ó®“ãÛ“Ü¬“í­“ªË’ÂÐ“ª¹“ªë“«¯“«©’¡¼“«È“«ë’¡¼“«ë“ªÏ Perl “ªÎ“«¯“«©’¡¼“«È“«ë’¡¼“«ë“ªÈ“ªÏ
-’´Ø“Ìõ“ª¬“ª¢“ªê“ªÞ“ª»“ªó -- C<q()>, C<qq()> “ªª“ªè“ªÓ“ÔÒ“ðú“ªÎ“ªâ“ªÎ“ªÏ C<''> “ªä C<""> “ªÎ
-“ÓÛ“ªï“ªê“ªÎ“ªÊ“ªë“ªâ“ªÎ“ªË“ªÏ’ÂÐ’±þ“ª·“ªÆ“ªª“ªé“ªº“¡¢“Ùþ“í®“ªò“«¯“«©’¡¼“«È“ª¹“ªë“ª¿“ªá“ªÎ
-“«Ð“«Ã“«¯“«¹“«é“«Ã“«·“«å“ªÀ“ª±“ª¬“î÷“ËÒ“ªµ“ªì“ªÞ“ª¹:
+“°Å“±â“¿¡ “¹®“ÀÚ“¿­“Á¾“´Ü“½Ä“º°“ÀÚ “´ë“ÇÑ “Æ÷“°ý “·ê“Àº Perl “ÀÇ “Æ÷“°ý “·ê“°ú“´Â
+“°ü“°è“¾ø“½À“´Ï“´Ù. -- C<q()>, C<qq()> “¹× “°°“Àº “Á¾“·ù“ÀÇ “°Í“Àº C<''> “³ª C<""> “ÀÇ
+“´ë“½Å “»ç“¿ë“ÇÒ “¼ö “¾ø“À¸“¸ç, “¹®“ÀÚ“¸¦ “ÀÎ“¿ë“ÇÏ“±â “À§“ÇØ “¹é“½½“·¡“½¬“¸¸“ÀÌ “Àü“°³“µË“´Ï“´Ù.
 
     print << "abc\"def";
     testing...
@@ -4039,16 +4038,16 @@ should be safe.
 
 =end original
 
-“õÌ“ý­“ªË“¡¢“«¯“«©’¡¼“«È“ªµ“ªì“ª¿“Ùþ“í®“Öª“ªÏ“ÜÜ‘Êý“ú¼“ªË“ª«“ª«“ªë“ª³“ªÈ“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“¡£
-“ãÛ“Ü¬“í­“ªË’´Ø“ª¹“ªë“ìé“Úõ“îÜ“ªÊ“«ë’¡¼“«ë“ªÏ“¡¢“Ùþ“í®“Öª“«ê“«Æ“«é“«ë“ªÇ“ªÊ“ª±“ªì“ªÐ“ªÊ“ªé“ª¤“ª³“ªÈ“ªÇ“ª¹“¡£
-“ª³“ªì“ªË’½¾“ªÃ“ªÆ“ª¤“ªì“ªÐ“¡¢“äÌ“îï“ªÎ“ªÏ“ªº“ªÇ“ª¹“¡£
+“¸¶“Áö“¸·“¿¡ “ÀÎ“¿ë“µÈ “¹®“ÀÚ“¿­“Àº “¿©“·¯“ÁÙ“¿¡ “°É“Ä£ “°Í“Àº “¾ø“½À“´Ï“´Ù.
+“½Ä“º°“ÀÚ“¿¡ “°ü“ÇÑ “ÀÏ“¹Ý“Àû“ÀÎ “·ê“Àº “¹®“ÀÚ“¿­“¸®“ÅÍ“·²“ÀÌ “¾Æ“´Ï“¸é “¾È“µÈ“´Ù“´Â “°Í“ÀÔ“´Ï“´Ù.
+“ÀÌ“°Í“À» “µû“¸£“°í “ÀÖ“´Ù“¸é “¾È“Àü“ÇÒ “°Í“ÀÔ“´Ï“´Ù.
 
 =back
 
 =head2 Gory details of parsing quoted constructs
 X<quote, gory details>
 
-(“«¯“«©’¡¼“«È“ªµ“ªì“ª¿“Ï°“ðã“ªÎ“«Ñ’¡¼“«¹“ªË’´Ø“ª¹“ªë“ßÙ“á¬)
+(“ÀÎ“¿ë“µÈ “±¸“Á¶“ÀÇ “ÆÐ“½º“¿¡ “°ü“ÇÑ “»ó“¼¼)
 
 =begin original
 
@@ -4061,12 +4060,12 @@ notions differ substantially from what the author honestly meant.
 
 =end original
 
-“ù¼“ª«“ÜÜ‘Êý“ªÎ“ú°’¼á“ª¬“Ê¦“Òö“ªÊ“øú“úÞ“ª¬“ª¢“ªÃ“ª¿“íÞ“ùê“¡¢Perl “ªÏ“õÌ“ªâ“ü¬“ª«“ªé“ª·“ª¤“ú°’¼á“ªò
-“àÔ’Âò“ª¹“ªë“ª¿“ªá“ªË B<DWIM> ("Do What I Mean")“ê«“öÎ“ªò“ÞÅ“ª¤“ªÞ“ª¹“¡£
-“ª³“ªÎ’Àï“ÕÔ“ªÏ“Þª“ßÈ“ªË“à÷“Íí“ª·“ª¿“ªÎ“ªÇ“¡¢Perl “«×“«í“«°“«é“«Þ“ªÏ“ª·“ªÐ“ª·“ªÐ
-“í»“ÝÂ“ª¬“ßö“ª¤“ª¿“ªâ“ªÎ“ªÎ“ÙÃ“âê“ªò“ë÷“ª¤“ªÞ“ª»“ªó“¡£
-“ª·“ª«“ª·“ãÁ“Êà“ª¬“ª¿“ªÄ“ªË“ªÄ“ªì“ªÆ“¡¢Perl “ªÎ‘¸Å“Ò·“ªÏ“íÂ“íº“ª¬“Üâ‘µ±“ªË“ëò“Ú«“ª·“ªÆ“ª¤“ª¿“ªâ“ªÎ“ª«“ªé
-“ª«“ªÊ“ªê’ÊÑ“ªï“ªê“ªÞ“ª·“ª¿“¡£
+“¹º“°¡ “¿©“·¯ “ÇØ“¼®“ÀÌ “°¡“´É“ÇÑ “Ç¥“Çö“ÀÌ “ÀÖ“´Â “°æ“¿ì, Perl “Àº “°¡“Àå “¸í“È®“ÇÑ “ÇØ“¼®“À»
+“¼±“ÅÃ“ÇÏ“±â “À§“ÇØ B<DWIM> ("Do What I Mean") “¿ø“Ä¢“À» “»ç“¿ë“ÇÕ“´Ï“´Ù.
+“ÀÌ “Àü“·«“Àº “»ó“´ç“È÷ “¼º“°ø“Çß“±â “¶§“¹®“¿¡ Perl “ÇÁ“·Î“±×“·¡“¸Ó“¿Í “±×“·°“Àú“·°
+“ÀÚ“½Å“ÀÌ “¾´ “°Í“ÀÇ “¸ð“¼ø“À» “ÀÇ“½É“ÇÏ“Áö “¾Ê“½À“´Ï“´Ù.
+“±×“·¯“³ª “½Ã“°£“ÀÌ “Èå“¸§“¿¡ “µû“¶ó Perl “ÀÇ “°³“³ä“Àº “¸¸“µç “»ç“¶÷“ÀÌ “Á¤“¸» “ÀÇ“¹Ì“ÇÏ“°í “ÀÖ“´Â
+“°Í“°ú“´Â “²Ï “´Þ“¶ó“Á³“½À“´Ï“´Ù.
 
 =begin original
 
@@ -4077,10 +4076,9 @@ same for all quoting operators, they are all discussed together.
 
 =end original
 
-“ª³“ªÎ“íñ“ªÇ“ªÏ Perl “ª¬“ªÉ“ªÎ“ªè“ª¦“ªË“«¯“«©’¡¼“«È“ªµ“ªì“ª¿“Ï°“ðã“ªò“Ðâ“ª¦“ª«“ªò
-“Ù¥“ü¬“ªË“ª·“ªè“ª¦“ªÈ“ÞÖ“ª¤“ªÞ“ª¹“¡£
-“ª³“ªì“ªò‘Ñ§“ªÜ“ª¦“ªÈ“ª¹“ªë“õÌ“ªâ“ªè“ª¯“ª¢“ªë“×â“ë¦“ªÏ“ïá“Ð®“øú“úÞ“ªÎ“Ú»“Ïà“ªò“ªÛ“ª°“ª¹“ª¿“ªá“ªÇ“ª¹“ª¬“¡¢
-“«Ñ’¡¼“«¹“ªÎ“ôø“Ñ¢“«¹“«Æ“«Ã“«×“ªÏ“îï“ªÆ“ªÎ“«¯“«©’¡¼“«È“æÑ“ß©“í­“ªÇ“ÔÒ“ª¸“ªÊ“ªÎ“ªÇ“¡¢“îï“ªÆ“ÔÒ“ãÁ“ªË“Ðâ“ª¤“ªÞ“ª¹“¡£
+“ÀÌ“¹ø “Àå“¿¡“¼­“´Â Perl “ÀÌ “¾î“¶² “ÀÎ“¿ë“±¸“Á¶“¸¦ “Ãë“±Þ“ÇÏ“´Â“°¡“¸¦ “¸í“È®“ÇÏ“°Ô “ÇÏ“°í“ÀÚ “ÇÕ“´Ï“´Ù.
+“ÀÌ“°Í“À» “°ø“ºÎ“ÇÏ“°í“ÀÚ “ÇÏ“´Â “°¡“Àå “Èç“ÇÑ “ÀÌ“À¯“´Â “Á¤“±Ô“Ç¥“Çö“ÀÇ “¹Ì“±Ã“À» “¹þ“¾î“³ª“±â “À§“ÇÔ“ÀÌ“Áö“¸¸,
+“ÆÐ“½º“ÀÇ “ÃÊ“±â“½º“ÅÜ“Àº “¸ð“µç “ÀÎ“¿ë“¿¬“»ê“ÀÚ“¿¡“¼­ “°°“±â“¶§“¹®“¿¡, “¸ð“µÎ “µ¿“½Ã“¿¡ “Ãë“±Þ“ÇÏ“°Ú“½À“´Ï“´Ù.
 
 =begin original
 
@@ -4093,13 +4091,13 @@ expectations much less frequently than this first one.
 
 =end original
 
-Perl “ªÎ“«Ñ’¡¼“«¹“ªË’´Ø“ª¹“ªë“«ë’¡¼“«ë“ªÇ“õÌ“ªâ“ñì“é©“ªÊ“ªâ“ªÎ“ªÏ“ì¤“ù»“ªÇ“âû“ªÙ“ªÆ“ª¤“ªë“ª¦“ªÁ
-“õÌ“ôø“ªÎ“ªâ“ªÎ“ªÇ“ª¹“¡£
-“ªÄ“ªÞ“ªê“¡¢“«¯“«©’¡¼“«È“ªµ“ªì“ª¿“Ï°“ðã“ªò’½è“×â“ª¹“ªë“ªÈ“ª­“ªÏ“¡¢Perl “ªÏ“ªÞ“ªº“ª½“ªÎ“Ï°“ðã“ªÎ
-“õÌ“ý­“ªò“÷®“ª·“ªÆ“¡¢“ª½“ªì“ª«“ªé“ñé“ãó“ªò“ú°’¼á“ª·“ªÞ“ª¹“¡£
-“ª³“ªÎ“«ë’¡¼“«ë“ª¬“ªï“ª«“ªì“ªÐ“¡¢“ªÈ“ªê“ª¢“ª¨“ªº“ªÏ“ª³“ªÎ“íñ“ªÎ‘²Ð“ªê“ªÏ’ÆÉ“ªß“Þ«“ªÐ“ª·“ªÆ“ªâ“ª«“ªÞ“ª¤“ªÞ“ª»“ªó“¡£
-“ª½“ªÎ“öâ“ªÎ“«ë’¡¼“«ë“ªÏ“õÌ“ôø“ªÎ“«ë’¡¼“«ë“ªË“Ýï“ªÙ“ªÆ“«æ’¡¼“«¶’¡¼“ªÎ“åø“ßÌ“ªË“Úã“ª¹“ªë“Þº“Óø“ªÏ
-“ªÏ“ªë“ª«“ªË“á´“ªÊ“ª¤“ªÇ“ª¹“¡£
+Perl “ÀÇ “ÆÐ“½º“¿¡ “°ü“ÇÑ “·ê“¿¡“¼­ “°¡“Àå “Áß“¿ä“ÇÑ “°Í“Àº “¾Æ“·¡“¿¡“¼­ “±â“¼ú“ÇÏ“°í “ÀÖ“´Â “°Í “Áß
+“Á¦“ÀÏ “Ã³“À½“ÀÇ “°Í“ÀÔ“´Ï“´Ù.
+“Áï, “ÀÎ“¿ë“±¸“Á¶“¸¦ “Ã³“¸®“ÇÏ“°í“ÀÚ “ÇÒ “¶§, Perl “Àº “¿ì“¼± “±× “±¸“Á¶“ÀÇ
+“¸¶“Áö“¸·“À» “Ã£“¾Æ“¼­ “³»“¿ë“À» “ÇØ“¼®“ÇÕ“´Ï“´Ù.
+“ÀÌ “·ê“À» “ÀÌ“ÇØ“ÇÏ“¸é, “¿ì“¼±“Àº “ÀÌ “Àå“ÀÇ “³²“Àº “ºÎ“ºÐ“Àº “³Ñ“¾î“°¡“µµ “»ó“°ü“¾ø“½À“´Ï“´Ù.
+“±× “¿Ü“ÀÇ “·ê“Àº “Ã³“À½“ÀÇ “·ê“°ú “ºñ“±³“ÇØ“¼­ “À¯“Àú“ÀÇ “¿¹“»ó“°ú “´Ù“¸¥ “ºó“µµ“´Â
+“¾ó“¸¶ “µÇ“Áö “¾Ê“½À“´Ï“´Ù.
 
 =begin original
 
@@ -4110,16 +4108,16 @@ one to four, but these passes are always performed in the same order.
 
 =end original
 
-“ì¤“ù»“ªÇ“ì¡“Öå“ª¹“ªë“«Ñ“«¹“ªË“ªÏ“ÔÒ“ãÁ“ªË’¼Â“ú¼“ªµ“ªì“ªë“ªâ“ªÎ“ªâ“ª¢“ªê“ªÞ“ª¹“ª¬“¡¢
-“Ì¿“Íý“ªÏ“ÔÒ“ª¸“ª³“ªÈ“ªÊ“ªÎ“ªÇ“¡¢“Ü¬‘¡©“ªË“ÍÅ“ª¨“ªë“ª³“ªÈ“ªË“ª·“ªÞ“ª¹“¡£
-“«¯“«©’¡¼“«È“Ï°“ðã“ªÎ“ðú“×¾“ªË“ªè“ªÃ“ªÆ“¡¢Perl “ª¬’¼Â“ú¼“ª¹“ªë“«Ñ“«¹“ªÎ‘Êý“ªÏ
-1 “ª«“ªé 4 “ªÞ“ªÇ“ì¶“ªÊ“ªê“ªÞ“ª¹“ª¬“¡¢“ª³“ªì“ªé“ªÎ“«Ñ“«¹“ªÏ“ßÈ“ªË“ÔÒ“ª¸“â÷“Ûã“ªÇ’¼Â“ú¼“ªµ“ªì“ªÞ“ª¹“¡£
+“¾Æ“·¡“¿¡“¼­ “ÀÇ“³í“ÇÏ“´Â “ÆÐ“½º“¿¡“´Â “°°“Àº “¶§“¿¡ “½Ç“Çà“µÇ“´Â “°Í“µµ “ÀÖ“Áö“¸¸,
+“°á“°ú“´Â “°°“Àº “°Í“ÀÌ“±â“¶§“¹®“¿¡ “º°“µµ“·Î “»ý“°¢“ÇÏ“±â“·Î “ÇÕ“´Ï.
+“ÀÎ“¿ë“±¸“Á¶“ÀÇ “Á¾“·ù“¿¡ “µû“¶ó, Perl “ÀÌ “½Ç“Çà“ÇÏ“´Â “ÆÐ“½º“ÀÇ “¼ö“´Â
+1“¿¡“¼­ 4“±î“Áö “´Ù“¸£“Áö“¸¸ “ÀÌ“·± “ÆÐ“½º“´Â “Ç×“»ó “°°“Àº “¼ø“¼­“·Î “½Ç“Çà“µË“´Ï“´Ù.
 
 =over 4
 
 =item Finding the end
 
-(“õÌ“ý­“ªò“÷®“ª¹)
+(“¸¶“Áö“¸·“À» “Ã£“±â)
 
 =begin original
 
@@ -4195,18 +4193,17 @@ are removed (exactly speaking, they are not copied to the safe location).
 
 =end original
 
-1 “Ùþ“í®“ªÎ“«Ç“«ê“«ß“«¿“ªò“÷®“ª¹“íÞ“ùê“¡¢“«¨“«¹“«±’¡¼“«×“ªµ“ªì“ª¿“«Ç“«ê“«ß“«¿“ªÈ C<\\> “ªÏ
-’ÆÉ“ªß“Þ«“ªÐ“ª·“ªÞ“ª¹“¡£
-“ÖÇ“ª¨“ªÐ“¡¢C</> “ªò“÷®“ª·“ªÆ“ª¤“ªë“ªÈ“ª­“ªË“ªÏ“¡¢C<\\> “ªÈ C<\/> “ªÎ“ðÚ“ªß“ùê“ªï“ª»“ªò
-’ÆÉ“ªß“Þ«“ªÐ“ª·“ªÞ“ª¹“¡£
-“«Ç“«ê“«ß“«¿“ª¬“ª«“ªÃ“ª³“ªÇ“ª¯“ª¯“ªé“ªì“ªÆ“ª¤“ªë“íÞ“ùê“ªÏ“¡¢“«Í“«¹“«È“ª·“ª¿“ðÚ“ªâ’ÆÉ“ªß“Þ«“ªÐ“ªµ“ªì“ªÞ“ª¹“¡£
-“ÖÇ“ª¨“ªÐ“¡¢“ËÒ“ª­“ªÎ C<[> “ªÈ“ðÚ“ªË“ªÊ“ªë“øÍ“ª¸“ªÎ C<]> “ªò“÷®“ª·“ªÆ“ª¤“ªë“ªÈ“ª­“ªË“ªÏ“¡¢
-C<\\>, C<\]>, C<\[> “ªÎ“ðÚ“ªß“ùê“ªï“ª»“ªò“ªÏ“îï“ªÆ’ÆÉ“ªß“Þ«“ªÐ“ª·“¡¢
-“ªµ“ªé“ªË“«Í“«¹“«È“ª·“ª¿ C<[>, C<]> “ªâ’ÆÉ“ªß“Þ«“ªÐ“ª·“ªÞ“ª¹“¡£
-“ª·“ª«“ª·“¡¢(C<qq\\> “ªä C<tr\\\> “ªÎ“ªè“ª¦“ªË)“«Ð“«Ã“«¯“«¹“«é“«Ã“«·“«å“ª¬“«Ç“«ê“«ß“«¿“ªÈ“ª·“ªÆ
-“ÞÅ“ªï“ªì“ª¿“íÞ“ùê“¡¢“ù¼“ªâ’ÆÉ“ªß“Þ«“ªÐ“ª·“ªÞ“ª»“ªó“¡£
-“ØÇ“Ú­“ªÎ’¸¡“ßã“ñé“¡¢“«Ç“«ê“«ß“«¿“ªò“«¨“«¹“«±’¡¼“«×“ª¹“ªë“«Ð“«Ã“«¯“«¹“«é“«Ã“«·“«å“ªÏ“ð¶“ËÛ“ªµ“ªì“ªÞ“ª¹
-(“âû“ªÙ“ª¿“ªÈ“ªª“ªê“ªË“ïá“ü¬“ªË“¡¢“äÌ“îï“ªÊ“íÞ“á¶“ªË“«³“«Ô’¡¼“ªÏ“ªµ“ªì“ªÞ“ª»“ªó)“¡£
+“ÇÑ “±Û“ÀÚ“ÀÇ “±¸“ºÐ“ÀÚ“¸¦ “Ã£“À» “°æ“¿ì, “ÀÌ“½º“ÄÉ“ÀÌ“ÇÁ“µÈ “±¸“ºÐ“ÀÚ“¿Í C<\\>“´Â
+“³Ñ“¾î“°©“´Ï“´Ù.
+“¿¹“¸¦ “µé“¾î, C</> “¸¦ “Ã£“À» “¶§“´Â, C<\\> “¿Í C<\/>“ÀÇ “Á¶“ÇÕ“Àº “³Ñ“¾î“°¡“¹ö“¸³“´Ï“´Ù.
+“±¸“ºÐ“ÀÚ“°¡ “°ý“È£“·Î “ÁÖ“¾î“Á³“À» “°æ“¿ì“´Â “Áß“º¹“µÈ “±×“·ì“µµ “³Ñ“¾î“°¡“¹ö“¸³“´Ï“´Ù.
+“¿¹“¸¦ “µé“¾î, “¿­“¸° C<[> “¿Í “±×“·ì“À» “ÀÌ“·ç“´Â “´Ý“´Â C<]>“¸¦ “Ã£“À» “¶§“¿¡“´Â
+C<\\>, C<\]>, C<\[> “ÀÇ “Á¶“ÇÕ“Àº “Àü“ºÎ “¹«“½Ã“ÇÏ“°í
+“°Å“±â“¿¡ “Áß“º¹“µÈ C<[>, C<]>“µµ “¹«“½Ã“ÇÕ“´Ï“´Ù.
+“±×“·¯“³ª, (C<qq\\> “³ª C<tr\\\>“°°“ÀÌ) “¹é“½½“·¡“½¬“°¡ “±¸“ºÐ“ÀÚ“·Î“½á 
+“»ç“¿ë“µÉ “°æ“¿ì“´Â “¾î“´À “°Í“µµ “¹«“½Ã“ÇÏ“Áö “¾Ê“½À“´Ï“´Ù.
+“¸Ç “¸¶“Áö“¸·“ÀÇ “°Ë“»ö“Áß, “±¸“ºÐ“ÀÚ“¸¦ “ÀÌ“½º“ÄÉ“ÀÌ“ÇÁ“ÇÏ“´Â “¹é“½½“·¡“½¬“´Â “Á¦“°Å“µË“´Ï“´Ù.
+(“¸»“ÇÑ “¹Ù“¿Í “°°“ÀÌ “Á¤“È®“È÷, “¾È“Àü“ÇÑ “Àå“¼Ò“¿¡ “º¹“»ç“´Â “ÇÏ“Áö“¾Ê“½À“´Ï“´Ù)
 
 =begin original
 
@@ -4224,11 +4221,12 @@ the comment may be regarded as the starting delimiter of the right part.
 
 =end original
 
-3 “ªÄ“ªÎ“«Ç“«ê“«ß“«¿“ª«“ªé“ªÊ“ªë“Ï°“ðã (C<s///>, C<y///>, C<tr///>) “ªÎ“íÞ“ùê“¡¢
-’¸¡“ßã“ªÏ“ªâ“ª¦“ìé“Óø“ðÛ“ªê“Ú÷“ªµ“ªì“ªÞ“ª¹“¡£
-“õÌ“ôø“ªÎ“«Ç“«ê“«ß“«¿“ª¬“ËÒ“ª­“ª«“ªÃ“ª³“ªÇ“ªÊ“ª¤“íÞ“ùê“¡¢C<s!!!> and C<tr)))> “ªÎ“ªè“ª¦“ªË
-3 “ªÄ“ªÎ“«Ç“«ê“«ß“«¿“ªÏ“ÔÒ“ª¸“ªÇ“ªÊ“ª±“ªì“ªÐ“ªÊ“ªê“ªÞ“ª»“ªó;
-“ª³“ªÎ“íÞ“ùê“¡¢2 “Ûã“ÙÍ“ªÎ“«Ç“«ê“«ß“«¿“ª¬“ñ§“ö°“ªÎ“ðû“Ó®“ªÈ“éÓ“ö°“ªÎ“ËÒ“ã·“ªò“ÔÒ“ãÁ“ªË“ú¼“ª¤“ªÞ“ª¹“¡£
+3 “°³“ÀÇ “±¸“ºÐ“ÀÚ“·Î “µÇ“´Â “±¸“Á¶ (C<s///>, C<y///>, C<tr///>) “ÀÇ “°æ“¿ì,
+“°Ë“»ö“Àº “ÇÑ“¹ø “µµ “¹Ý“º¹“µË“´Ï“´Ù.
+“¸Ç “Ã³“À½“ÀÇ “±¸“ºÐ“ÀÚ“°¡ “¿­“¸° “°ý“È£“°¡ “¾Æ“´Ñ “°æ“¿ì, C<s!!!> “¿Í C<tr)))> “°°“ÀÌ
+3 “°³“ÀÇ “±¸“ºÐ“ÀÚ“´Â “°°“Àº “°Í“ÀÌ “¾Æ“´Ï“¸é “¾È“µË“´Ï“´Ù.
+“ÀÌ “°æ“¿ì, 2“¹ø“Â°“ÀÇ “±¸“ºÐ“ÀÚ“°¡ “¿Þ“ÂÊ“ÀÇ “³¡“´Ü“°ú “¿À“¸¥“ÂÊ“ÀÇ “½Ã“ÀÛ“À» “µ¿“½Ã“¿¡ “¼ö“Çà“ÇÕ“´Ï“´Ù.
+
 If the left part is delimited by bracketing punctuations (that is C<()>,
 C<[]>, C<{}>, or C<< <> >>), the right part needs another pair of
 delimiters such as C<s(){}> and C<tr[]//>.  In these cases, whitespaces
@@ -4244,8 +4242,8 @@ Thus:
 
 =end original
 
-’¸¡“ßã“ª¹“ªë“Êà“¡¢“Ï°“ðã“ªÎ“Ùþ“Øæ“ªÏ“ÍÅ“Õç“ª·“ªÞ“ª»“ªó“¡£
-’½¾“ªÃ“ªÆ:
+“°Ë“»ö“ÇÏ“´Â “»ç“ÀÌ“¿¡ “±¸“Á¶“ÀÇ “¹®“¸Æ“Àº “°í“·Á“ÇÏ“Áö “¾Ê“½À“´Ï“´Ù.
+“µû“¶ó“¼­;
 
     "$hash{"$foo/$bar"}"
 
@@ -4255,7 +4253,7 @@ or:
 
 =end original
 
-“ªä:
+“ÀÌ“°Å“³ª:
 
     m/
       bar	# NOT a comment, this slash / terminated m//!
@@ -4271,12 +4269,12 @@ modifier.  So the embedded C<#> is interpreted as a literal C<#>.
 
 =end original
 
-“ªÏ“ïá“ª·“ª¤“«¯“«©’¡¼“«È“øú“úÞ“ªÇ“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“¡£
-“«¯“«©’¡¼“«È“ªÏ“õÌ“ôø“ªÎ C<"> “ªä C</> “ªÇ“ðû“ªï“ªê“ªÈ“ªÊ“ªê“¡¢
-‘²Ð“ªê“ªÎ“Ý»“ÝÂ“ªÏ“Ùþ“Ûö“«¨“«é’¡¼“ªÈ“ªÊ“ªê“ªÞ“ª¹“¡£
-C<m//> “ªò“ðû“ªï“ªé“ª»“ªÆ“ª¤“ªë“«¹“«é“«Ã“«·“«å“ªÎ“ó­“ªË‘À´“ªÆ“ª¤“ªë“ªÎ“ª¬ C<“Íö“ÛÜ> “ªÊ“ªÎ“ªÇ“¡¢
-“ß¾“ªÎ“ÖÇ“ªÇ“ªÏ C<m//x> “ªÇ“ªÏ“ªÊ“ª¯“¡¢C</x> “ªÊ“ª·“ªÎ C<m//> “ªÈ“ªÊ“ªê“ªÞ“ª¹“¡£
-’½¾“ªÃ“ªÆ“¡¢“ñé“ªË“ª¢“ªë C<#> “ªÏ“«ê“«Æ“«é“«ë“ªÊ C<#> “ªÈ“ª·“ªÆ“Ðâ“ªï“ªì“ªÞ“ª¹“¡£
+“Àº “Á¤“È®“ÇÑ “ÀÎ“¿ë“Ç¥“Çö“ÀÌ “¾Æ“´Õ“´Ï“´Ù.
+“ÀÎ“¿ë“Àº “¸Ç “Ã³“À½“ÀÇ C<"> “³ª C</> “·Î “³¡“³ª“°í, 
+“³²“Àº “ºÎ“ºÐ“Àº “¹®“¹ý“¿¡“·¯“°¡ “µË“´Ï“´Ù.
+C<m//> “¸¦“³¡“³»“°í “ÀÖ“´Â “½½“·¡“½¬“ÀÇ “´Ù“À½“¿¡ “¿À“´Â “°Í“ÀÌ C<“°ø“¹é> “ÀÌ“¶ó“¼­,
+“À§“ÀÇ “¿¹“Á¦“¿¡“¼­“´Â C<m//x> “°¡ “¾Æ“´Ñ C</x> “¾ø“´Â C<m//>“ÀÌ “µË“´Ï“´Ù.
+“µû“¶ó“¼­, “¾È“¿¡ “ÀÖ“´Â C<#> “Àº “¸®“ÅÍ“·²“ÇÑ C<#> “·Î“½á “Ãë“±Þ“µË“´Ï“´Ù.
 
 =begin original
 
@@ -4287,15 +4285,15 @@ Instead, use C<\034> or C<\x1c> at the end of quoted constructs.
 
 =end original
 
-“ª³“ªÎ’¸¡“ßã“ªÎ“Êà“¡¢C<\c\> (“«Þ“«ë“«Á“«Ð“«¤“«È“Ùþ“í®“ð¤“åÙ“Ùþ“Ûö)“ªË“ñ¼“ëò“ªÏ’Ê§“ªï“ªì“ªÞ“ª»“ªó“¡£
-’½¾“ªÃ“ªÆ“¡¢C<qq/\c\/> “ªÎ 2 “Ûã“ÙÍ“ªÎ C<\> “ªÏ C<\/> “ªÎ“ìé“Ý»“ªÈ“ª·“ªÆ“Ðâ“ªï“ªì“¡¢
-“ìÚ“ª­’Â³“ª¯ C</> “ªÏ“«Ç“«ê“«ß“«¿“ªÈ“ª·“ªÆ“ìã“ãÛ“ªµ“ªì“ªÞ“ª»“ªó“¡£
-“ÓÛ“ªï“ªê“ªË“¡¢“«¯“«©’¡¼“«È“Ï°“ðã“ªÎ“ØÇ“Ú­“ªË C<\034> “ª« C<\x1c> “ªò“ÞÅ“ªÃ“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
+“ÀÌ “°Ë“»ö“À» “ÇÏ“´Â “»ç“ÀÌ“¿¡, C<\c\> (“¸Ö“Æ¼“¹Ù“ÀÌ“Æ®“¹®“ÀÚ“Á¦“¾î“¹®“¹ý)“¿¡ “½Å“°æ“¾²“Áö “¾Ê“½À“´Ï“´Ù.
+“µû“¶ó“¼­, C<qq/\c\/>“ÀÇ 2“¹ø“Â°“ÀÇ C<\> “´Â C<\/> “ÀÇ “ÀÏ“ºÎ“·Î“½á “Ãë“±Þ“µÇ“°í,
+“°Å“±â“¿¡ C</> “Àº “±¸“ºÐ“ÀÚ“·Î“½á “ÀÎ“½Ä“µÇ“Áö “¾Ê“½À“´Ï“´Ù.
+“´ë“½Å“¿¡ “ÀÎ“¿ë“±¸“Á¶“ÀÇ “³¡“´Ü“Àº C<\034> “È¤“Àº C<\x1c>“¸¦ “»ç“¿ë“ÇØ“ÁÖ“¼¼“¿ä.
 
 =item Interpolation
 X<interpolation>
 
-(“î÷“ËÒ)
+(“Àü“°³)
 
 =begin original
 
@@ -4304,8 +4302,8 @@ delimiter-independent.  There are multiple cases.
 
 =end original
 
-“ó­“ªÎ“«¹“«Æ“«Ã“«×“ªÏ“¡¢“Ôð“ªé“ªì“ª¿(“«Ç“«ê“«ß“«¿“ªË“ëî“ðí“ª·“ªÊ“ª¤)“«Æ“«­“«¹“«È“ªË’ÂÐ“ª¹“ªë“î÷“ËÒ“ªÇ“ª¹“¡£
-“ÜÜ‘Êý“ªÎ“«±’¡¼“«¹“ª¬“ª¢“ªê“ªÞ“ª¹“¡£
+“´Ù“À½ “´Ü“°è“´Â, “¾ò“¾î“Áø(“±¸“ºÐ“ÀÚ“¿¡ “ÀÇ“Á¸“ÇÏ“Áö “¾Ê“Àº) “ÅØ“½º“Æ®“¿¡ “´ë“ÇÑ “Àü“°³“ÀÔ“´Ï“´Ù.
+“¿©“·¯ “°æ“¿ì“°¡ “ÀÖ“½À“´Ï“´Ù.
 
 =over 4
 
@@ -4319,9 +4317,9 @@ are not available for here-docs.
 
 =end original
 
-“î÷“ËÒ“ªÏ“ú¼“ªï“ªì“ªÞ“ª»“ªó“¡£
-C<\\> “ªÎ“ðÚ“ªß“ùê“ªï“ª»“ªÏ“ª½“ªÎ“ªÞ“ªÞ“ªÇ“ª¢“ªë“ª³“ªÈ“ªË“ñ¼“ëò“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤;
-“«Ò“«ä“«É“«­“«å“«á“«ó“«È“ªÇ“ªÏ“«Ç“«ê“«ß“«¿“ªÎ“«¨“«¹“«±’¡¼“«×“ªÏ“ªÇ“ª­“ªÊ“ª¤“ª«“ªé“ªÇ“ª¹“¡£
+“Àü“°³“´Â “¼ö“Çà“µÇ“Áö “¾Ê“½À“´Ï“´Ù.
+C<\\> “ÀÇ “Á¶“ÇÕ“Àº “±×“´ë“·Î“ÀÎ “°Í“¿¡ “ÁÖ“ÀÇ“ÇØ“ÁÖ“¼¼“¿ä.
+here-docs“¿¡“¼­“´Â “±¸“ºÐ“ÀÚ“ÀÇ “ÀÌ“½º“ÄÉ“ÀÌ“ÇÁ“´Â “µÇ“Áö “¾Ê“±â “¶§“¹®“ÀÔ“´Ï“´Ù.
 
 =item  C<m''>, the pattern of C<s'''>
 
@@ -4349,10 +4347,10 @@ C<\1> in the replacement of C<s'''> does not work as C<$1>.
 
 =end original
 
-C<\\> “ªÎ“ðÚ“ªË“ªª“ª±“ªë C<\> “ªÎ“Þû“ð¶“ªÎ“ªß“ª¬“ú¼“ªï“ªì“ªÞ“ª¹“¡£
-’½¾“ªÃ“ªÆ“¡¢C<tr'''> “ªä C<y'''> “ªÎ“ñé“ªË“ª¢“ªë C<-> “ªÏ“Ùþ“í®“÷×“ªê“«Ï“«¤“«Õ“«ó“ªÈ“ª·“ªÆ“Ðâ“ªï“ªì“¡¢
-“Ùþ“í®“Ûô’°Ï“ªÏ“ÞÅ“ª¨“ªÞ“ª»“ªó“¡£
-C<s'''> “ªÎ“öÇ“üµ“Ùþ“í®“Öª“ªÇ“ªÎ C<\1> “ªÏ C<$1> “ªÈ“ª·“ªÆ“ªÏ“ÔÑ“íÂ“ª·“ªÞ“ª»“ªó“¡£
+C<\\> “ÀÇ “Á¶“ÇÕ“¿¡ “ÀÇ“ÇÑ C<\> “ÀÇ “»è“Á¦“¸¸“ÀÌ “¼ö“Çà“µË“´Ï“´Ù.
+“µû“¶ó“¼­ C<tr''> “³ª C<y'''> “ÀÇ “¾È“¿¡ “ÀÖ“´Â C<-> “´Â “¹®“ÀÚ“±×“´ë“·Î “ÇÏ“ÀÌ“ÇÂ“À¸“·Î“½á
+“Ãë“±Þ“µÇ“°í “¹®“ÀÚ“¹ü“À§“´Â “»ç“¿ë“ÇÏ“Áö “¾Ê“½À“´Ï“´Ù.
+C<s'''> “ÀÈ “Ä¡“È¯“¹®“ÀÚ“¿­“¿¡“¼­“ÀÇ C<\1> “Àº C<$1>“·Î“½á“´Â “µ¿“ÀÛ“ÇÏ“Áö “¾Ê“½À“´Ï“´Ù.
 
 =item C<tr///>, C<y///>
 
@@ -4388,13 +4386,12 @@ expansions.
 
 =end original
 
-C<\Q>, C<\U>, C<\u>, C<\L>, C<\l> (“ªª“ª½“ªé“ª¯“ªÏ C<\E> “ªÈ“ªÎ“ðÚ)“ªÏ
-’ÂÐ’±þ“ª¹“ªë Perl “Ï°“ðã“ªË’ÊÑ“üµ“ªµ“ªì“ªÞ“ª¹“¡£
-’½¾“ªÃ“ªÆ“¡¢C<"$foo\Qbaz$bar"> “ªÏ‘ÄÚ“Ý»“îÜ“ªË
-C<$foo . (quotemeta("baz" . $bar))> “ªË’ÊÑ“üµ“ªµ“ªì“ªÞ“ª¹“¡£
-C<\200> “ªä C<\t> “ªÎ“ªè“ª¦“ªÊ“¡¢“ª½“ªÎ“öâ“ªÎ“«¨“«¹“«±’¡¼“«×“«·’¡¼“«±“«ó“«¹“ªä“¡¢C<\\> “ªä
-C<\-> “ªÎ“ªè“ª¦“ªÊ“¡¢“«Ð“«Ã“«¯“«¹“«é“«Ã“«·“«å“ª¬“ªÄ“ª±“ªé“ªì“ª¿“Ùþ“í®“ªÏ“îê“ï·“ªÊ’³È“íå“ªË
-“öÇ“üµ“ªµ“ªì“ªÞ“ª¹“¡£
+C<\Q>, C<\U>, C<\u>, C<\L>, C<\l> (“¾Æ“¸¶“µµ C<\E> “¿Í“ÀÇ “Á¶“ÇÕ)“Àº
+“´ë“ÀÀ“ÇÏ“´Â Perl “±¸“Á¶“¿¡ “º¯“È¯“µË“´Ï“´Ù.
+“µû“¶ó“¼­,C<"$foo\Qbaz$bar"> “Àº “³»“ºÎ“Àû“À¸“·Î
+C<$foo . (quotemeta("baz" . $bar))> “·Î “º¯“È¯“µË“´Ï“´Ù. 
+C<\200> “³ª C<\t> “°°“ÀÌ, “±× “¿Ü“ÀÇ “ÀÌ“½º“ÄÉ“ÀÌ“ÇÁ“½Ã“Äö“½º“³ª C<\\>“³ª C<\->“°°“Àº
+“¹é“½½“·¡“½¬“°¡ “ºÙ“Àº “¹®“ÀÚ“´Â “Àû“Àý“ÇÑ “È®“Àå“À¸“·Î “Ä¡“È¯“µË“´Ï“´Ù.
 
 =begin original
 
@@ -4408,14 +4405,14 @@ as C<"\\\t"> (since TAB is not alphanumeric).  Note also that:
 
 =end original
 
-I<C<\Q> “ªÈ C<\E> “ªÎ“Êà“ªË“ª¢“ªë“îï“ªÆ“ªÎ“ªâ“ªÎ> “ª¬“÷×“ßÈ“ªÎ“Û°“Ûö“ªÇ“î÷“ËÒ“ªµ“ªì“ªÞ“ª¹“¡£
-C<"\Q\\E"> “ªÎ“ªè“ª¦“ªÊ“ªâ“ªÎ“ªÏ‘ÄÚ“Ý»“ªË“ª¢“ªë“ªÎ“ªÏ C<\E> “ªÇ“ªÏ“ªÊ“ª¯“¡¢
-C<\Q>, C<\\>, C<E> “ªÇ“ª¢“ªë“ªÎ“ªÇ“¡¢“Ì¿“Íý“ªÏ C<"\\\\E"> “ªÈ“ÔÒ“ª¸“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-“ìé“Úõ“îÜ“ªÊ“«ë’¡¼“«ë“ªÈ“ª·“ªÆ“¡¢C<\Q> “ªÈ C<\E> “ªÎ“Êà“ªË“ª¢“ªë“«Ð“«Ã“«¯“«¹“«é“«Ã“«·“«å“ªÏ
-“òÁ“Êï“ªË“Úã“ª·“ª¿“Ì¿“Íý“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-“ª½“ªì“ªÇ“¡¢C<"\Q\t\E"> “ªÏ C<quotemeta("\t")> “ªË’ÊÑ“üµ“ªµ“ªì“¡¢“ª³“ªì“ªÏ(TAB “ªÏ
-“çÈ‘Êý“í®“ªÇ“ªÏ“ªÊ“ª¤“ªÎ“ªÇ C<"\\\t"> “ªÈ“ÔÒ“ª¸“ªÇ“ª¹“¡£
-“ì¤“ù»“ªÎ“ªè“ª¦“ªÊ“ª³“ªÈ“ªË“ªâ“ñ¼“ëò“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤:
+I<C<\Q> “¿Í C<\E> “»ç“¿¡“ÀÌ “ÀÖ“´Â “¸ð“µç “°Í> “ÀÌ “ÀÏ“¹Ý“Àû“ÀÎ “¹æ“¹ý“À¸“·Î “Àü“°³“µË“´Ï“´Ù.
+C<"\Q\\E"> “°°“Àº “°Í“Àº “³»“ºÎ“¿¡ “ÀÖ“´Â “°Í“Àº C<\E>“°¡ “¾Æ“´Ñ 
+C<\Q>, C<\\>, C<E> “ÀÌ“±â“¶§“¹®“¿¡, “°á“°ú“´Â C<"\\\\E"> “¿Í “°°“¾Æ“Áý“´Ï“´Ù. 
+“ÀÏ“¹Ý“Àû“ÀÎ “·ê“·Î“½á, C<\Q>“¿Í C<\E>“ÀÇ “»ç“ÀÌ“¿¡ “ÀÖ“´Â “¹é“½½“·¡“½¬“´Â
+“»ý“°¢“ÇÏ“´Â “°Í“°ú“´Â “´Ù“¸¥ “°á“°ú“°¡ “µË“´Ï“´Ù.
+“±×“·¡“¼­ C<"\Q\t\E"> “´Â C<quotemeta("\t">“·Î “º¯“È¯“µÇ“°í, “ÀÌ“°Í“Àº(TAB “Àº
+“¿µ“¾î“¼ý“ÀÚ“°¡ “¾Æ“´Ñ C<"\\\t">“¿Í “°°“½À“´Ï“´Ù.
+“¾Æ“·¡“¿Í “°°“Àº “°Í“¿¡“µµ “ÁÖ“ÀÇ“ÇØ “ÁÖ“¼¼“¿ä.
 
   $str = '\t';
   return "\Q$str";
@@ -4426,7 +4423,7 @@ may be closer to the conjectural I<intention> of the writer of C<"\Q\t\E">.
 
 =end original
 
-“ª³“ªì“ªÏ C<"\Q\t\E"> “ªò“ßö“ª¤“ª¿“ìÑ“ªÎ“åã“ö´“ß¾“ªÎ I<“ëò’¿Þ> “ªË“ªè“ªê“ÐÎ“ª¤“ªÇ“ª¹“¡£
+“ÀÌ“°Í“Àº C<"\Q\t\E"> “À» “¾´ “»ç“¶÷“ÀÇ “¾ï“Ãø“»ó“ÀÇ I<“ÀÇ“µµ> “¿¡ “°¡“±õ“½À“´Ï“´Ù.
 
 =begin original
 
@@ -4435,8 +4432,8 @@ C<.> catenation operations.  Thus, C<"$foo XXX '@arr'"> becomes:
 
 =end original
 
-“î÷“ËÒ“ªµ“ªì“ª¿“«¹“««“«é“ªÈ“ÛÕ“Öª“ªÏ‘ÄÚ“Ý»“ªÇ C<join> “ªÈ C<.> “ªÎ“Ì¿“ùê“ðÃ“íÂ“ªË’ÊÑ“üµ“ªµ“ªì“ªÞ“ª¹“¡£
-’½¾“ªÃ“ªÆ“¡¢C<"$foo XXX '@arr'"> “ªÏ“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ªÊ“ªê“ªÞ“ª¹:
+“Àü“°³“µÈ “½º“Ä®“¤¿“¿Í “¹è“¿­“Àº “³»“ºÎ“¿¡“¼­ C<join> “°ú C<.> “ÀÇ “°á“ÇÕ“Á¶“ÀÛ“À¸“·Î “º¯“È¯“µË“´Ï“´Ù.
+“µû“¶ó“¼­, C<"$foo XXX '@arr'"> “Àº “¾Æ“·¡“Ã³“·³ “µË“´Ï“´Ù.
 
   $foo . " XXX '" . (join $", @arr) . "'";
 
@@ -4446,7 +4443,7 @@ All operations above are performed simultaneously, left to right.
 
 =end original
 
-“ß¾“ÑÀ“ªÎ“îï“ªÆ“ªÎ“ðÃ“íÂ“ªÏ“¡¢“ñ§“ª«“ªé“éÓ“ªË“ÔÒ“ãÁ“ªË“ú¼“ªï“ªì“ªÞ“ª¹“¡£
+“À§“ÀÇ “¸ð“µç “Á¶“ÀÛ“Àº “¿Þ“ÂÊ“¿¡“¼­ “¿À“¸¥“ÂÊ“À¸“·Î “µ¿“½Ã“¿¡ “ÀÌ“·ç“¾î“Áý“´Ï“´Ù.
 
 =begin original
 
@@ -4458,11 +4455,10 @@ scalar.
 
 =end original
 
-C<"\Q STRING \E"> “ªÎ“Ì¿“Íý“ªÏ“îï“ªÆ“ªÎ“«á“«¿“Ùþ“í®“ª¬“«¯“«©’¡¼“«È“ªµ“ªì“ªÆ“ª¤“ªë“ªÎ“ªÇ“¡¢
-C<\Q\E> “ªÎ“ðÚ“ªÎ‘ÄÚ“ö°“ªË“«ê“«Æ“«é“«ë“ªÎ C<$> “ªä C<@> “ªò’ÁÞ“ìý“ª¹“ªë“Û°“Ûö“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“¡£
-C<\> “ªË“ªè“ªÃ“ªÆ“áú“ªé“ªì“ªÆ“ª¤“ªë“íÞ“ùê“¡¢C<$> “ªÏ“«¯“«©’¡¼“«È“ªµ“ªì“ªÆ C<"\\\$"> “ªÈ
-“ªÊ“ªê“ªÞ“ª¹“¡£
-“ª½“ª¦“ªÇ“ªÊ“ª¤“íÞ“ùê“¡¢“ª³“ªì“ªÏ“î÷“ËÒ“ªµ“ªì“ªë“«¹“««“«é’ÊÑ‘Êý“ªÎ“ËÒ“ã·“ªÈ“ª·“ªÆ“ú°’¼á“ªµ“ªì“ªÞ“ª¹“¡£
+C<"\Q STRING \E"> “ÀÇ “°á“°ú“´Â “¸ð“µç “¸Þ“Å¸“¹®“ÀÚ“°¡ “ÀÎ“¿ë“µÈ “°Í“ÀÌ“¹Ç“·Î,
+C<\Q\E> “ÀÇ “Á¶“ÇÕ“ÀÇ “³»“ºÎ“¿¡ “¸®“ÅÍ“·²“ÇÑ C<$> “³ª C<@> “¸¦ “»ð“ÀÔ“ÇÏ“´Â “¹æ“¹ý“Àº “¾ø“½À“´Ï“´Ù.
+C<\> “¿¡“ÀÇ“ÇØ “º¸“È£“µÇ“´Â “°æ“¿ì, C<$> “Àº “ÀÎ“¿ë“µÈ C<"\\\$"> “ÀÌ “µË“´Ï“´Ù.
+“±×“·¸“Áö “¾Ê“Àº “°æ“¿ì, “ÀÌ“°Í“Àº “Àü“°³“µÇ“´Â “½º“Ä®“¶ó“º¯“¼ö“ÀÇ “½Ã“ÀÛ“À¸“·Î“½á “ÇØ“¼®“µË“´Ï“´Ù.
 
 =begin original
 
@@ -4472,9 +4468,9 @@ C<< "a $b -> {c}" >> really means:
 
 =end original
 
-“î÷“ËÒ“«³’¡¼“«É“ªÏ“¡¢“î÷“ËÒ“ª¹“ªë“«¹“««“«é’ÊÑ‘Êý“ª¬“ªÉ“ª³“ªÇ“ðû“ªï“ªë“ª«“ªò“Ì½“ïÒ“ª¹“ªë“ù±“é©“ª¬
-“ª¢“ªë“ª³“ªÈ“ªË“ªâ“ñ¼“ëò“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
-“ÖÇ“ª¨“ªÐ“¡¢C<< "a $b -> {c}" >> “ª¬’¼Â“ð·“ªË“ªÏ“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ªÊ“ªë“ª«:
+“Àü“°³“ÄÚ“µå“´Â “Àü“°³“ÇÏ“´Â “½º“Ä®“¶ó“º¯“¼ö“°¡ “¾î“µð“¿¡“¼­ “³¡“³ª“´Â “°¡“¸¦ “°á“Á¤“ÇÒ “ÇÊ“¿ä“°¡
+“ÀÖ“´Ù“´Â “°Í“¿¡“µµ “ÁÖ“ÀÇ“ÇØ“ÁÖ“¼¼“¿ä.
+“¿¹“¸¦ “µé“¾î, C<< "a $b -> {c} " >> “ÀÌ “½Ç“Á¦“·Î “¾Æ“·¡“Ã³“·³ “µÉ“°Í“ÀÎ“°¡
 
   "a " . $b . " -> {c}";
 
@@ -4484,7 +4480,7 @@ or:
 
 =end original
 
-“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ªÊ“ªë“ª«“ªÇ“ª¹:
+“¾Æ“·¡“Ã³“·³ “µÉ“°Í“ÀÎ“°¡ “ÇÏ“´Â “°Í “ÀÔ“´Ï“´Ù.
 
   "a " . $b -> {c};
 
@@ -4498,11 +4494,16 @@ Fortunately, it's usually correct for ambiguous cases.
 
 =end original
 
+“´ë“ºÎ“ºÐ“ÀÇ “°æ“¿ì, “¿ä“¼Ò“¿Í, “¸Å“Ä¡“ÇÏ“´Â “Áß“°ý“È£“³ª “´ë“°ý“È£“ÀÇ “»ç“ÀÌ“¿¡ “°ø“¹é“À» “Æ÷“ÇÔ“ÇÏ“Áö “¾Ê“°í,
+“¾ö“Ã» “±ä “ÅØ“½º“Æ®“°¡ “µË“´Ï“´Ù.
+“Ãâ“·Â“Àº “Ãß“Á¤“±â“µÎ“°í “Åõ“Ç¥“¿¡ “ÀÇ“ÇØ “°á“Á¤“µÇ“¾î“Áú“¶§, “°á“°ú“´Â “¾ö“¹Ð“ÇÏ“°Ô
+“¿¹“Ãø“ÇÒ “¼ö “¾ø“½À“´Ï“´Ù.
+
 “ªÛ“ªÈ“ªó“ªÉ“ªÎ“íÞ“ùê“¡¢“é©“áÈ“ªÈ“¡¢“«Þ“«Ã“«Á“ª¹“ªë“ñé“ª«“ªÃ“ª³“ªä“ÓÞ“ª«“ªÃ“ª³“ªÎ“Êà“ªË“Íö“ÛÜ“ªò“ùß“ªÞ“ªÊ“ª¤“¡¢
 “õÌ“ªâ“íþ“ª¤“«Æ“«­“«¹“«È“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
 “õó“Õô“ªÏ’È¯“Ì¸“îÜ“ªÊ“õÏ“ïÒ“Ðï“ªò“ªè“ªë“÷á“øù“ªË“ªè“ªÃ“ªÆ“Ì½“ïÒ“ªµ“ªì“ªë“ªÎ“ªÇ“¡¢“Ì¿“Íý“ªÏ’¸·“ÚË“ªË“ªÏ
 “åø“ö´“ªÇ“ª­“ªÞ“ª»“ªó“¡£
-“ú¹“ª¤“¡¢“ÝÑ“ªé“ªï“ª·“ª¤“íÞ“ùê“ªÇ“ªâ“ÜÅ“÷×“ªÏ“ïá“ª·“ª¤“ªÇ“ª¹“¡£
+“¿î“ÁÁ“°Ô“µµ, “¸ð“È£“ÇÑ “°æ“¿ì“¿¡“µµ “ÀÏ“¹Ý“Àû“À¸“·Î“´Â “¸Â“½À“´Ï“´Ù. 
 
 =item the replacement of C<s///>
 
@@ -4513,8 +4514,8 @@ happens as with C<qq//> constructs.
 
 =end original
 
-C<\Q>, C<\U>, C<\u>, C<\L>, C<\l> “ªÎ’½è“×â“ªÈ“î÷“ËÒ“ª¬ C<qq//> “Ï°“ðã“ªÈ
-“ÔÒ“ª¸“ªè“ª¦“ªË“ÑÃ“ª³“ªê“ªÞ“ª¹“¡£
+C<\Q>, C<\U>, C<\u>, C<\L>, C<\l> “ÀÇ “Ã³“¸®“¿Í “Àü“°³“°¡  C<qq//> “±¸“Á¶“¿Í
+“°°“°Ô “ÀÏ“¾î“³³“´Ï“´Ù.
 
 =begin original
 
@@ -4526,11 +4527,11 @@ is emitted if the C<use warnings> pragma or the B<-w> command-line flag
 
 =end original
 
-“ª³“ªÎ“«¹“«Æ“«Ã“«×“ªÇ“ªÏ“¡¢“ªè“ªê“Ëí“îï“ªÊ“Ùþ“Ûö“ªò“ªÞ“ªÀ“Óô“ìý“ª·“ªÆ“ª¤“ªÊ“ª¤“¡¢“â¢“ªË“Ý¶“ª¨“ªÊ“ª¤ I<sed>
-“«Ï“«Ã“««’¡¼“ªÎ“ª¿“ªá“ªË“¡¢C<s///> “ªÎ“öÇ“üµ“«Æ“«­“«¹“«È“ªÎ“ñé“ªË“ª¢“ªë C<\1> “ªò“¡¢“ª·“ªÖ“ª·“ªÖ“ªÊ“ª¬“ªé
-C<$1> “ªË’ÊÑ“üµ“ª·“ªÞ“ª¹“¡£
-C<use warnings> “«×“«é“«°“«Þ“ªä“«³“«Þ“«ó“«É“«é“«¤“«ó“«ª“«×“«·“«ç“«ó B<-w> (“ª³“ªì“ªÏ C<$^W>
-’ÊÑ‘Êý“ªÇ“ª¹) “ª¬“«»“«Ã“«È“ªµ“ªì“ªÆ“ª¤“ªë“ªÈ“Ìí“Í±“ª¬“ßæ“à÷“ªµ“ªì“ªÞ“ª¹“¡£
+“ÀÌ “½º“ÅÜ“¿¡“¼­“´Â “º¸“´Ù “°Ç“Àü“ÇÑ “¹®“¹ý“À» “¾Æ“Á÷ “µµ“ÀÔ“ÇÏ“Áö “¾Ê“Àº, “Áö“Áö “¾Ê“À¸“·Á“´Â I<sed>
+“ÇØ“Ä¿“¸¦ “À§“ÇØ C<s///>“ÀÇ “Ä¡“È¯“ÅØ“½º“Æ®“ÀÇ “¾È“¿¡ “ÀÖ“´Â C<\1> “À», “¸¶“Áö“¸ø“ÇØ 
+C<$1>“·Î “º¯“È¯“ÇÕ“´Ï“´Ù.
+C<use warnings> “ÇÁ“¶ó“±×“¸¶ “³ª “Ä¿“¸Ç“µå“¶ó“ÀÎ“¿É“¼Ç B<-w> (“ÀÌ“°Í“Àº C<$^W> “º¯“¼ö“ÀÔ“´Ï“´Ù)
+“°¡ “¼¼“ÆÃ“µÇ“¾î “ÀÖ“À¸“¸é “°æ“°í“°¡ “»ý“¼º“µË“´Ï“´Ù.
 
 =item C<RE> in C<?RE?>, C</RE/>, C<m/RE/>, C<s/RE/foo/>,
 
